Updated translations for Serbian (intentionally not applying to trunk too).
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42057 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-ei/sr@ijekavian.po
+++ b/po/wesnoth-ei/sr@ijekavian.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: wesnoth-ei\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-05 01:53+0100\n"
+"PO-Revision-Date: 2010-04-05 17:36+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -1446,7 +1446,7 @@ msgstr ""
 "Нада да се ова села могу заштити је беспредметна. Сви који остану, изгинуће. "
 "Али, ако смогнемо растерати све разбојнике, можда можемо уредити да сви "
 "сељани крену с нама ка Североземљу. Тамо имају изгледа да преживе. Веснот "
-"више није безбиједан."
+"више није безбједан."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05.Northern_Outpost.cfg:148
@@ -1541,7 +1541,7 @@ msgstr "Поражен сам! Нема ми више страховладе у 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05.Northern_Outpost.cfg:491
 msgid "We still need to defeat these undead for the villagers to be safe."
-msgstr "И даље нам је поразити немртве да би сељани били безбиједни."
+msgstr "И даље нам је поразити немртве да би сељани били безбједни."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05.Northern_Outpost.cfg:497
@@ -2233,7 +2233,7 @@ msgid ""
 "After reaching what they believed was safety, Gweddry and his men had been "
 "captured by northern orcs."
 msgstr ""
-"Пошто стигоше, како су мислили, на безбиједно, Гведрија и његове људе "
+"Пошто стигоше, како су мислили, на безбједно, Гведрија и његове људе "
 "заробише сјеверњачки оркови."
 
 #. [part]
@@ -2551,7 +2551,7 @@ msgid ""
 "It is not safe here, but we cannot go back north. The orcs are a more "
 "immediate threat."
 msgstr ""
-"Овдје није безбиједно, али не можемо опет на сјевер. Оркови су нам "
+"Овдје није безбједно, али не можемо опет на сјевер. Оркови су нам "
 "непосреднија претња."
 
 #. [option]: speaker=Gweddry
@@ -3134,7 +3134,7 @@ msgstr ""
 "досеге моје личне моћи. За разлику од великог генерала Гведрија, не желим да "
 "се скривам иза оклопних сукњи својих војника! Ти си, о заповједниче Гведри, "
 "обична кукавица! Бардови могу опјевати како си побиједио моје капетане, али "
-"у збиљи ниси учинио ништа до скривао се у безбиједности залеђине својих "
+"у збиљи ниси учинио ништа до скривао се у безбједности залеђине својих "
 "редова, док су други храбрији од тебе крварили и гинули у твоје име."
 
 #. [message]: speaker=Gweddry
