--- a/po/wesnoth-httt/sr@ijekavianlatin.po
+++ b/po/wesnoth-httt/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-httt\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-26 15:39+0100\n"
-"PO-Revision-Date: 2010-03-14 18:26+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -876,7 +876,7 @@ msgid ""
 "Safe voyage to you, friends. Rest assured that we will never surrender to "
 "the forces of the Dark Queen."
 msgstr ""
-"Bezbijedan vam put, prijatelji. Budite sigurni da se nikada nećemo predati "
+"Bezbjedan vam put, prijatelji. Budite sigurni da se nikada nećemo predati "
 "snagama mračne Kraljice."
 
 #. [message]: speaker=unit
@@ -1374,12 +1374,12 @@ msgstr "Od sada možeš najmiti plemeniti morejski narod!"
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:698
 msgid "Now where is Delfador? I hope he's safe!"
-msgstr "Pa gdje je onda Delfador? Nadam se da je bezbijedan!"
+msgstr "Pa gdje je onda Delfador? Nadam se da je bezbjedan!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:717
 msgid "I am perfectly safe, friend!"
-msgstr "Savršeno sam bezbijedan, prijatelju!"
+msgstr "Savršeno sam bezbjedan, prijatelju!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:721
@@ -1476,7 +1476,7 @@ msgstr "Brodovi? Uh! Prošli me put spopade morska bolest. Pješačićemo!"
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:777
 msgid "Safe journey to you, Konrad. Until we meet again!"
-msgstr "Bezbijedan ti put, Konrad. Do sljedećeg susreta!"
+msgstr "Bezbjedan ti put, Konrad. Do sljedećeg susreta!"
 
 #. [option]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:791
@@ -1487,7 +1487,7 @@ msgstr "Ploveći na brodu, možemo se barem donekle odmoriti. Neka bude morem!"
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:795
 msgid "Safe voyage to you then, Konrad. May the weather be fair."
-msgstr "Bezbijedna ti plovidba, Konrade, i neka te vrijeme posluži."
+msgstr "Bezbjedna ti plovidba, Konrade, i neka te vrijeme posluži."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:845
@@ -1570,8 +1570,8 @@ msgid ""
 "With the orcs controlling the seas, going by ship would not be safe. Travel "
 "by land, Elensefar is only six days' march up the coast. Make haste!"
 msgstr ""
-"Pošto orkovi kontrolišu mora, ne bi bilo bezbijedno poći brodom. Već ti "
-"kreni kopnom, Elensefar je tek šest dana marširanja duž obale. Požuri!"
+"Pošto orkovi kontrolišu mora, ne bi bilo bezbjedno poći brodom. Već ti kreni "
+"kopnom, Elensefar je tek šest dana marširanja duž obale. Požuri!"
 
 #. [scenario]: id=05a_Muff_Malals_Peninsula
 #: data/campaigns/Heir_To_The_Throne/scenarios/05a_Muff_Malal_Peninsula.cfg:4
@@ -2483,7 +2483,7 @@ msgid ""
 "strategy, and she has hired orcs to guard them. We shall have to fight to "
 "travel through."
 msgstr ""
-"Oprezno! Ova brda nisu bezbijedna! Putevi su važni za Aševirine napore, i "
+"Oprezno! Ova brda nisu bezbjedna! Putevi su važni za Aševirine napore, i "
 "unajmila je orke da ih čuvaju. Moraćemo da se borimo da se probijemo tuda."
 
 #. [message]: speaker=Konrad
@@ -2506,7 +2506,7 @@ msgstr "Niodijen"
 #. [message]: speaker=Niodien
 #: data/campaigns/Heir_To_The_Throne/scenarios/07_Crossroads.cfg:460
 msgid "Stay on the path! The hills here are not safe!"
-msgstr "Ostanite na stazi! Brda ovdje nisu bezbijedna!"
+msgstr "Ostanite na stazi! Brda ovdje nisu bezbjedna!"
 
 # |, no-check-spell
 #. [event]
@@ -2712,7 +2712,7 @@ msgid ""
 msgstr ""
 "Nisam ja dijete, i ne želim da raspravljamo o tome! Reče da ćete me "
 "poštedjeti, ta onda produžite svojim poslom. Sjeverni put bi trebalo da je "
-"bezbijedan."
+"bezbjedan."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/08_The_Princess_of_Wesnoth.cfg:245
@@ -2810,7 +2810,7 @@ msgid ""
 "My lord! This road does not seem as safe as we had hoped. Look around us at "
 "the hills - there are undead about!"
 msgstr ""
-"Gospodaru! Ovaj put ne izgleda tako bezbijedno kao što se ponadasmo. "
+"Gospodaru! Ovaj put ne izgleda tako bezbjedno kao što se ponadasmo. "
 "Osmotrite brda oko nas — to se nemrtvi po njima vuku!"
 
 #. [message]: speaker=Selda-Mana
@@ -3003,9 +3003,8 @@ msgstr "Poraziš li majku grifona i neprijateljskog zapovjednika"
 # |, no-check-spell
 #. [side]: type=General, id=Robryn
 #: data/campaigns/Heir_To_The_Throne/scenarios/10_Gryphon_Mountain.cfg:70
-#, fuzzy
 msgid "Robryn"
-msgstr "Ronri"
+msgstr "Robrin"
 
 #. [side]: type=Gryphon, id=Mother Gryphon
 #: data/campaigns/Heir_To_The_Throne/scenarios/10_Gryphon_Mountain.cfg:88
@@ -3111,7 +3110,7 @@ msgid ""
 "or Alduin before winter falls. We must therefore cross the great river and "
 "continue toward the land of the dwarves. Hurry, let us go!"
 msgstr ""
-"Moramo nastaviti ka sjeveru. Prekasno je da se vratimo u bezbijednost "
+"Moramo nastaviti ka sjeveru. Prekasno je da se vratimo u bezbjednost "
 "Elensefara ili Aldujina, prije nego što zima stegne. Stoga nam je prijeći "
 "veliku reku i nastaviti prema patuljačkim zemljama. Požurite, krenimo odmah!"
 
@@ -3450,7 +3449,7 @@ msgstr ""
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/11_The_Ford_of_Abez.cfg:412
 msgid "We made it across the river safely! Where to now?"
-msgstr "Bezbijedno se prebacismo preko rijeke! Kuda ćemo sada?"
+msgstr "Bezbjedno se prebacismo preko rijeke! Kuda ćemo sada?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/11_The_Ford_of_Abez.cfg:417
@@ -5091,7 +5090,7 @@ msgid ""
 "barely know where we are. Look to the north... there are orcs about! Look to "
 "the south... there are the hordes of the undead!"
 msgstr ""
-"Nije to tako prosto! Sada smo na površini, ali teško da smo bezbijedni. "
+"Nije to tako prosto! Sada smo na površini, ali teško da smo bezbjedni. "
 "Gotovo i da ne znamo gdje smo. Pogledaj ka sjeveru... to se orkovi tamo "
 "muvaju! Pogledaj ka jugu... tamo su horde nemrtvih!"
 
@@ -5164,7 +5163,7 @@ msgid ""
 "the north, orcs, to the south, dark hordes. We must remain at peace with one "
 "another, or else all perish!"
 msgstr ""
-"Mir, prijatelji! Iako su tuneli iza nas, teško da smo bezbedni. Nalazimo se "
+"Mir, prijatelji! Iako su tuneli iza nas, teško da smo bezbjedni. Nalazimo se "
 "negde u opustošenim i divljim sjevernjačkim zemljama, to je sve što znamo. "
 "Gledajte! Na sjeveru orkovi, na jugu mračne horde. Mir među nama mora još "
 "potrajati, inače smo propali!"
@@ -5230,8 +5229,8 @@ msgstr ""
 "Možemo krenuti dvjema stazama koje se klone rijeke. Na sjever, kroz drevni "
 "dom mog naroda, pa onda na istok gdje sada obitavaju. Ili možemo na jug, "
 "gazeći kroz močvare, prije nego što skrenemo na istok pa na sjever. Ovim "
-"drugim putem bismo morali još jednom da prijeđemo rijeku, ali znam "
-"bezbijedno mjesto za prelazak."
+"drugim putem bismo morali još jednom da prijeđemo rijeku, ali znam bezbjedno "
+"mjesto za prelazak."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:254
@@ -5242,7 +5241,7 @@ msgstr ""
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:258
 msgid "If the elves will promise me refuge and safe passage, then I will go."
-msgstr "Ako mi vilenjaci jemče za utočište i bezbijedan prolaz, poći ću."
+msgstr "Ako mi vilenjaci jemče za utočište i bezbjedan prolaz, poći ću."
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:262
@@ -5277,7 +5276,7 @@ msgstr ""
 "Prinče Konrade, vi i vaši prijatelji često pominjete da Arkan-toriju treba "
 "izbeći. Ali vas mi možemo povesti niz nju. Uz pomoć nas morejaca, riječnim "
 "putem mogli biste doseći dom sjevernjačkih vilenjaka mnogo prije nego ikojim "
-"od kopnenih puteva. Ne mogu vam obećati bezbijedno putovanje jer ne znam šta "
+"od kopnenih puteva. Ne mogu vam obećati bezbjedno putovanje jer ne znam šta "
 "leži pred nama, ali je to mogućnost o kojoj biste mogli porazmisliti, "
 "gospodaru."
 
@@ -5310,7 +5309,7 @@ msgid ""
 "safety, then lead on."
 msgstr ""
 "Ako ste uvjereni da se možete snaći u ovim vodama i izvesti naše snage na "
-"bezbijedno, povedite."
+"bezbjedno, povedite."
 
 #. [message]: speaker=unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:311
@@ -5341,7 +5340,7 @@ msgstr ""
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:327
 msgid "Of course not, whelp, else he would have chosen a safer route."
-msgstr "Naravno da ne, štene, inače bi izabrao bezbednije staze."
+msgstr "Naravno da ne, štene, inače bi izabrao bezbjednije staze."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:332
@@ -6621,7 +6620,7 @@ msgid ""
 "my people. Only there will you be safe!"
 msgstr ""
 "Gospodine, gospo, vremena za gubljenje nema! Morate stići do domova mog "
-"naroda na istoku. Tek tamo možete biti bezbijedni!"
+"naroda na istoku. Tek tamo možete biti bezbjedni!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:444
@@ -6779,7 +6778,7 @@ msgid ""
 msgstr ""
 "Pozdrav, prijatelji vilenjaka! Dobrodošli u Emetriju, moj posjed u "
 "Lintaniru. Morate se skloniti ovdje dok bitka ne prođe. Ako neko vrijeme "
-"ostanete ovdje pokraj mene, svi ćemo biti bezbijedni."
+"ostanete ovdje pokraj mene, svi ćemo biti bezbjedni."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:674
@@ -8094,7 +8093,7 @@ msgstr "Kako se usuđujem? Ja sam visoki rektor Vijeća arhimagova..."
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:373
 msgid ""
 "... bearer of the staff of An-Usrukhar, guardian of the book of Crelanu ..."
-msgstr "...nosilac štapa An Usrukara, čuvar knjige Krelanua..."
+msgstr "...nosilac štapa An Usruhara, čuvar knjige Krelanua..."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:377
