--- a/po/wesnoth-low/sr.po
+++ b/po/wesnoth-low/sr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-14 18:26+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -297,7 +297,7 @@ msgid ""
 "little heed to anyone younger than a century old."
 msgstr ""
 "Велики вилењачки јунак Каленз роди се у тихој зеленој шуми Линтанирској, на "
-"ободима Велике северне шуме. Иако не бијеше племенита рода, рано је исказао "
+"ободима Велике северне шуме. Иако не беше племенита рода, рано је исказао "
 "надареност у вештинама свог народа. Хитрим умом задобио је више од "
 "уобичајеног поштовања међу старешинама, иначе шкртим у поклањању пажње било "
 "коме млађем од столећа."
@@ -1063,7 +1063,7 @@ msgid ""
 "Then you have not heard the ill tidings. King Haldric has broken the treaty. "
 "The humans will not come to our help!"
 msgstr ""
-"Онда нисте чули рђаве новости. Краљ Халдрик је порекинуо споразум. Ништа од "
+"Онда нисте чули рђаве новости. Краљ Халдрик је прекинуо споразум. Ништа од "
 "помоћи људи!"
 
 #. [message]: id=Kalenz
@@ -1072,7 +1072,7 @@ msgid ""
 "We have failed to relieve the defenders, and more orcish war-bands are "
 "arriving. All is lost!"
 msgstr ""
-"Не успесмо да одлакшамо браниоцима, а пристиже још орковских ратних дружина. "
+"Не успесмо да олакшамо браниоцима, а пристиже још орковских ратних дружина. "
 "Све је изгубљено!"
 
 #. [objective]: condition=win
@@ -2674,7 +2674,7 @@ msgid ""
 "You cannot even imagine it. Why do you suppose orcs came all the way here to "
 "attack you?"
 msgstr ""
-"Не можеш ни замислити. Шта мислиш, зашто оркови дођоше скроз довдје да вас "
+"Не можеш ни замислити. Шта мислиш, зашто оркови дођоше скроз довде да вас "
 "нападну?"
 
 #. [part]
@@ -2838,7 +2838,7 @@ msgid ""
 msgstr ""
 "Како? Не реци да смо се морали борити против сауријанаца, прегазити Аркан-"
 "Торију, суочити се с речним неманима, пробити кроз тролове и јетије да "
-"дођемо довдје — низашта!"
+"дођемо довде — низашта!"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:135
@@ -2850,7 +2850,7 @@ msgid ""
 msgstr ""
 "Морате убити њиховог великог поглавицу, али тако да изгледа као да су то "
 "учинили други оркови. Тиме ћете их гурнути у међусобни рат за наслеђе, јер "
-"многи жуде за мјестом Великог Поглавице. Бићете безбедни док се не уздигне "
+"многи жуде за местом Великог Поглавице. Бићете безбедни док се не уздигне "
 "нови вођ довољно јак да их поново уједини."
 
 #. [part]
@@ -4038,7 +4038,7 @@ msgid ""
 "have recaptured your home. Yet I sense there is turmoil in your mind..."
 msgstr ""
 "Калензе, твој задатак је довршен. Велики поглавица оркова је мртав, повратио "
-"си свој дом. Па ипак, осjећам немир у твом уму..."
+"си свој дом. Па ипак, осећам немир у твом уму..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/18_Hour_of_Glory.cfg:19
@@ -4377,8 +4377,8 @@ msgid ""
 "Kalenz, the council has decided that you are to be stripped of all military "
 "authority. You may now go."
 msgstr ""
-"Калензе, веће је одлучило да те разријеши свих војних надлежности. Сада "
-"можеш поћи."
+"Калензе, веће је одлучило да те разреши свих војних надлежности. Сада можеш "
+"поћи."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:55
@@ -4770,8 +4770,8 @@ msgid ""
 "Landar's remaining followers' lives were spared, but they were banished to "
 "Gitamoth forest, henceforth known as Silent Forest."
 msgstr ""
-"Преосталим Ландаровим следбеницима беху поштеђени животи, али их протјераше "
-"у Гитамотску шуму, од тада знану као Нечујна шума."
+"Преосталим Ландаровим следбеницима беху поштеђени животи, али их протераше у "
+"Гитамотску шуму, од тада знану као Нечујна шума."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/24_Epilogue.cfg:22
