--- a/po/wesnoth-low/sr@ijekavianlatin.po
+++ b/po/wesnoth-low/sr@ijekavianlatin.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-14 18:26+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -300,7 +300,7 @@ msgstr ""
 "obodima Velike sjeverne šume. Iako ne biješe plemenita roda, rano je iskazao "
 "nadarenost u vještinama svog naroda. Hitrim umom zadobio je više od "
 "uobičajenog poštovanja među starešinama, inače škrtim u poklanjanju pažnje "
-"bilo kome mlađem od stoleća."
+"bilo kome mlađem od stoljeća."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/01_The_Uprooting.cfg:47
@@ -793,8 +793,8 @@ msgid ""
 "since the other path is through troll territory..."
 msgstr ""
 "Ponadah se da ćemo izbjeći ove staze... Istočni, kraći put je kroz "
-"patuljačke posjede. Molim se da nam patuljci dozvole bezbijedan prolazak, "
-"jer je drugi put kroz zemlju trolova..."
+"patuljačke posjede. Molim se da nam patuljci dozvole bezbjedan prolazak, jer "
+"je drugi put kroz zemlju trolova..."
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/02_Hostile_mountains.cfg:476
@@ -1065,7 +1065,7 @@ msgid ""
 "Then you have not heard the ill tidings. King Haldric has broken the treaty. "
 "The humans will not come to our help!"
 msgstr ""
-"Onda niste čuli rđave novosti. Kralj Haldrik je porekinuo sporazum. Ništa od "
+"Onda niste čuli rđave novosti. Kralj Haldrik je prekinuo sporazum. Ništa od "
 "pomoći ljudi!"
 
 #. [message]: id=Kalenz
@@ -1074,8 +1074,8 @@ msgid ""
 "We have failed to relieve the defenders, and more orcish war-bands are "
 "arriving. All is lost!"
 msgstr ""
-"Ne uspjesmo da odlakšamo braniocima, a pristiže još orkovskih ratnih "
-"družina. Sve je izgubljeno!"
+"Ne uspjesmo da olakšamo braniocima, a pristiže još orkovskih ratnih družina. "
+"Sve je izgubljeno!"
 
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:849
@@ -1141,7 +1141,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:1011
 msgid "We won! The Ka'lian is safe!"
-msgstr "Pobijedismo! Kalijan je bezbijedan!"
+msgstr "Pobijedismo! Kalijan je bezbjedan!"
 
 # |, no-check-spell
 #. [unit]: id=Huraldur, type=Elvish Scout
@@ -1945,7 +1945,7 @@ msgid ""
 "Kalenz, you have won a great victory! Wesmere is safe. But...for what cause "
 "have you invited a dwarf to the elvish council? This is most unusual!"
 msgstr ""
-"Kalenze, izborio si veliku pobjedu! Vesmer je bezbijedan. Ali... s kojim "
+"Kalenze, izborio si veliku pobjedu! Vesmer je bezbjedan. Ali... s kojim "
 "naumom pozva jednog patuljka na vilenjačko vijeće?"
 
 #. [part]
@@ -2178,7 +2178,7 @@ msgid ""
 "before starting off on the long and dangerous trip to the great mage of "
 "Thoria. They would soon find that peril was closer than they had reckoned."
 msgstr ""
-"Uvjereni da će se prividna bezbijednost Vesmera pokazati skupom varkom, "
+"Uvjereni da će se prividna bezbjednost Vesmera pokazati skupom varkom, "
 "Kalenz i Olurf ostaviše dovoljno snaga i zaliha za odbranu, prije nego što "
 "se zaputiše na dug i opasan put do velikog maga iz Torije. Ubrzo će doznati "
 "da opasnost biješe bliža nego što su računali."
@@ -2798,8 +2798,8 @@ msgstr ""
 "osornijim i sumnjičavijim prema onima koje je nekada ubrajao u saveznike. "
 "Svako se može služiti Rubinom u boju, kad se njegov bijes stopi sa vatrenim "
 "duhom dragulja, ali samo pravi gospodar magije, ili neko neobično čistog "
-"srca, može bezbijedno rukovati njime van boja. Nezaklonjeno, magično "
-"zračenje Rubina pomalo preobraćuje Haldrika kad god mu se ovaj približi."
+"srca, može bezbjedno rukovati njime van boja. Nezaklonjeno, magično zračenje "
+"Rubina pomalo preobraćuje Haldrika kad god mu se ovaj približi."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:105
@@ -2859,7 +2859,7 @@ msgid ""
 msgstr ""
 "Morate ubiti njihovog velikog poglavicu, ali tako da izgleda kao da su to "
 "učinili drugi orkovi. Time ćete ih gurnuti u međusobni rat za naslijeđe, jer "
-"mnogi žude za mjestom Velikog Poglavice. Bićete bezbijedni dok se ne uzdigne "
+"mnogi žude za mjestom Velikog Poglavice. Bićete bezbjedni dok se ne uzdigne "
 "novi vođ dovoljno jak da ih ponovo ujedini."
 
 #. [part]
@@ -3062,7 +3062,7 @@ msgid ""
 msgstr ""
 "Landar je možda nagao, ali je izvrstan borac i povjerljiv prijatelj. Mislim "
 "da sada treba da se posvetimo zadatku. Krelanu, tvoja će knjiga biti "
-"bezbijedna s nama. Kleodil će je nositi dok ne nađemo dostojnog čuvara."
+"bezbjedna s nama. Kleodil će je nositi dok ne nađemo dostojnog čuvara."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:250
@@ -3070,7 +3070,7 @@ msgid ""
 "Come, I will give you and Landar the potion and show you a safe point to "
 "cross the river."
 msgstr ""
-"Dođite, daću tebi i Landaru napitak, i pokazati vam bezbijedno mjesto za "
+"Dođite, daću tebi i Landaru napitak, i pokazati vam bezbjedno mjesto za "
 "prelaženje rijeke."
 
 #. [scenario]: id=13_News_from_the_front
@@ -3133,7 +3133,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/13_News_from_the_front.cfg:141
 msgid "This means we are safe for the time being, no?"
-msgstr "Ne znači li to da smo privremeno bezbijedni?"
+msgstr "Ne znači li to da smo privremeno bezbjedni?"
 
 #. [message]: id=Eonihar
 #: data/campaigns/Legend_of_Wesmere/scenarios/13_News_from_the_front.cfg:145
@@ -3557,7 +3557,7 @@ msgid ""
 "It is peril not merely to your body, but to the essence of yourself."
 msgstr ""
 "Naučila sam te svemu što se usuđujem. Gospodaru... Kalenze... molim se da se "
-"bezbijedno vratiš. Srce mi se cijepa kad pomislim u kakvu se opasnost "
+"bezbjedno vratiš. Srce mi se cijepa kad pomislim u kakvu se opasnost "
 "upuštaš. Nije to tek prijetnja tvom fizičkom bitku, već samom tvom suštastvu."
 
 #. [part]
