--- a/po/wesnoth-manual/sr@ijekavian.po
+++ b/po/wesnoth-manual/sr@ijekavian.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-manual\n"
 "POT-Creation-Date: 2010-01-18 16:58+0100\n"
-"PO-Revision-Date: 2010-03-15 22:12+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: Kate\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Associated-UI-Catalogs: wesnoth wesnoth-lib wesnoth-multiplayer wesnoth-tb "
 "wesnoth-httt\n"
@@ -3475,7 +3475,7 @@ msgid ""
 "useful!"
 msgstr ""
 "Не шаљите повријеђене јединице у сигурну смрт. Пошто јединица изгуби преко "
-"половине ударпоена (УП), озбиљно размислите да је повучете на безбиједно и "
+"половине ударпоена (УП), озбиљно размислите да је повучете на безбједно и "
 "ради лијечења поставите или у село или покрај видара (као што су вилин-"
 "врачарке и бијели магови). Видари су врло корисни!"
 
@@ -3856,7 +3856,7 @@ msgid ""
 "future scenarios anyway."
 msgstr ""
 "Немојте занемарити прибављање искуства свом вођу. Тачно је да мора бити "
-"безбиједан, али ако га превише мазите остаће прениског нивоа да бисте га "
+"безбједан, али ако га превише мазите остаће прениског нивоа да бисте га "
 "могли сачувати у каснијим сценаријима."
 
 #. type: Content of: <book><chapter><section><title>
