--- a/po/wesnoth-manual/sr@ijekavianlatin.po
+++ b/po/wesnoth-manual/sr@ijekavianlatin.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-manual\n"
 "POT-Creation-Date: 2010-01-18 16:58+0100\n"
-"PO-Revision-Date: 2010-03-15 22:12+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: Kate\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Associated-UI-Catalogs: wesnoth wesnoth-lib wesnoth-multiplayer wesnoth-tb "
 "wesnoth-httt\n"
@@ -618,8 +618,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/multiplayer-1.5.11.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/multiplayer-"
-"1.7.10.jpg\"/> </imageobject>"
+"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/"
+"multiplayer-1.7.10.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: ../../doc/manual/manual.en.xml:329
@@ -780,8 +780,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/game-screen-1.5.7.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/game-screen-"
-"1.7.10.jpg\"/> </imageobject>"
+"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/game-"
+"screen-1.7.10.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: ../../doc/manual/manual.en.xml:394
@@ -888,8 +888,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/right_pane-1.5.7.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/right_pane-"
-"1.7.10.jpg\"/> </imageobject>"
+"<imageobject> <imagedata fileref=\"images/sr@ijekavianlatin/"
+"right_pane-1.7.10.jpg\"/> </imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: ../../doc/manual/manual.en.xml:474
@@ -3483,7 +3483,7 @@ msgid ""
 "useful!"
 msgstr ""
 "Ne šaljite povrijeđene jedinice u sigurnu smrt. Pošto jedinica izgubi preko "
-"polovine udarpoena (UP), ozbiljno razmislite da je povučete na bezbijedno i "
+"polovine udarpoena (UP), ozbiljno razmislite da je povučete na bezbjedno i "
 "radi liječenja postavite ili u selo ili pokraj vidara (kao što su vilin-"
 "vračarke i bijeli magovi). Vidari su vrlo korisni!"
 
@@ -3868,7 +3868,7 @@ msgid ""
 "future scenarios anyway."
 msgstr ""
 "Nemojte zanemariti pribavljanje iskustva svom vođu. Tačno je da mora biti "
-"bezbijedan, ali ako ga previše mazite ostaće preniskog nivoa da biste ga "
+"bezbjedan, ali ako ga previše mazite ostaće preniskog nivoa da biste ga "
 "mogli sačuvati u kasnijim scenarijima."
 
 #. type: Content of: <book><chapter><section><title>
