--- a/po/wesnoth-tsg/sr@ijekavianlatin.po
+++ b/po/wesnoth-tsg/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-tsg\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-02 21:25+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -527,7 +527,7 @@ msgid ""
 "was overrun. They have kept me safe, though I was gravely wounded..."
 msgstr ""
 "Ostav! Ja sam to, Aleron! Seljani me sakriše od razbojnika, kad ovi "
-"pregaziše grad. Sačuvaše me na bezbijednom, iako sam bio teško ranjen..."
+"pregaziše grad. Sačuvaše me na bezbjednom, iako sam bio teško ranjen..."
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/01_Born_To_The_Banner.cfg:507
@@ -739,7 +739,7 @@ msgstr "Zauzmeš li utvrđenje u Vestinu do kraja devetog poteza"
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/02_Proven_By_The_Sword.cfg:250
 msgid "At last the citadel is secured."
-msgstr "Bar je utvrđenje obezbijeđeno."
+msgstr "Bar je utvrđenje obezbjeđeno."
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/02_Proven_By_The_Sword.cfg:254
@@ -1446,7 +1446,7 @@ msgid ""
 "You said this valley would be safe, and we find it filled with skeletal "
 "foes! Cannot some of your elf friends help us in our struggle?"
 msgstr ""
-"Rekoste nam da bi ova dolina trebalo da bude bezbijedna, a evo, nađosmo je "
+"Rekoste nam da bi ova dolina trebalo da bude bezbjedna, a evo, nađosmo je "
 "kako vrvi od nemrtvog neprijatelja! Ne bi li nam neki od vaših vilenjačkih "
 "sadrugova mogli pomoći u nevolji?"
 
@@ -1809,7 +1809,7 @@ msgid ""
 "to our lands. Justice can wait until we are all safely in Westin."
 msgstr ""
 "Gospodaru, oni bi nam mogli biti vrijedni saveznici, a nemrtvi su veća "
-"prijetnja našim zemljama. Pravda može da sačeka dok svi ne budemo bezbijedni "
+"prijetnja našim zemljama. Pravda može da sačeka dok svi ne budemo bezbjedni "
 "u Vestinu."
 
 #. [message]: speaker=Ethiliel
