--- a/po/wesnoth-utbs/sr@ijekavian.po
+++ b/po/wesnoth-utbs/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-utbs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-26 15:39+0100\n"
-"PO-Revision-Date: 2010-03-05 01:53+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 "X-Generator: Kate\n"
@@ -73,9 +73,8 @@ msgstr "пустињски тумарач"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:27
-#, fuzzy
 msgid "(Expert level, 11 scenarios.)"
-msgstr "(Зналачки ниво, 11 сценарија.)\n"
+msgstr "(Зналачки ниво, 11 сценарија.)"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:27
@@ -636,7 +635,7 @@ msgstr "Нару"
 #. [message]: speaker=Naru
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:799
 msgid "Is it safe to come out? I was so scared."
-msgstr "Је ли безбиједно изаћи? Такав ме је страх обузео."
+msgstr "Је ли безбједно изаћи? Такав ме је страх обузео."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:803
@@ -1313,7 +1312,7 @@ msgid ""
 "strength and rest safely on the grass during the heat of the day."
 msgstr ""
 "Гледајте, оаза! Њена освежавајућа вода обновиће снагу нашим људима, и "
-"пружити безбиједан одмор на трави током врелог дана."
+"пружити безбједан одмор на трави током врелог дана."
 
 #. [scenario]: id=2_Across_the_Harsh_Sands, role=Hunting Ogre, role=Hunting Ogre
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:838
@@ -1670,7 +1669,7 @@ msgid ""
 "There's no way we can get all our people safely across the desert with "
 "outlaws harassing us. We must defeat them before we can continue."
 msgstr ""
-"Нема начина да безбиједно спроведемо сав народ преко пустиње уз одметнике "
+"Нема начина да безбједно спроведемо сав народ преко пустиње уз одметнике "
 "који нас шиканирају. Морамо их свладати прије него наставимо."
 
 #. [message]: speaker=$explorer.id
@@ -1784,7 +1783,7 @@ msgid ""
 "must deal with the Black Hand before we can progress further."
 msgstr ""
 "Одметници Црне руке и даље пријете другима. Док је њихов вођ на ногама, не "
-"можемо се безбиједно кретати песком. Морамо се ријешити Црне руке прије него "
+"можемо се безбједно кретати песком. Морамо се ријешити Црне руке прије него "
 "што можемо наставити пут."
 
 #. [message]: speaker=Kaleh
@@ -3150,7 +3149,7 @@ msgstr ""
 "отвореном пијеску. Поред тога, послије скорашњих губитака, немамо више "
 "бројну предност коју смо раније имали. Зато морамо бити изузетно опрезни. Па "
 "ипак, ако смогнемо рашчистити путању кроз брда пред нама, добри су нам "
-"изгледи да безбиједно спроведемо народ у тунеле. Уз мало наде, под земљом ће "
+"изгледи да безбједно спроведемо народ у тунеле. Уз мало наде, под земљом ће "
 "нам бити лакше да их заштитимо него на отвореном."
 
 #. [message]: speaker=Kaleh
@@ -3574,7 +3573,7 @@ msgstr ""
 "Предуго нам је требало да уведемо народ у тунеле! Још орковских снага "
 "пристиже преко брда са истока и запада, и опкољава нас. Нема начина да "
 "побијемо толике орке и гоблине. Више нема наде да ћемо се докопати "
-"безбиједности."
+"безбједности."
 
 #. [scenario]: id=5_A_Subterranean_Struggle
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:8
@@ -4105,7 +4104,7 @@ msgid ""
 "But even if we do, what about all of our people? How can we safely escort "
 "them through this war zone?"
 msgstr ""
-"Али чак и ако тако учинимо, шта с нашим народом? Како ћемо их безбиједно "
+"Али чак и ако тако учинимо, шта с нашим народом? Како ћемо их безбједно "
 "провести кроз овај ратни појас?"
 
 #. [message]: speaker=Kaleh
@@ -4120,7 +4119,7 @@ msgstr ""
 "И нећемо. Ако задржимо највећи број вилењака сакривен назад у пролазима, то "
 "би требало да их заштити бар на неко вријеме. У међувремену, ми ћемо кренути "
 "напријед и покушати да разријешимо ову збрку. Мислим да право кажеш, Жул, "
-"будемо ли имали среће, још се можемо нагодити за безбиједан пролаз одавдје."
+"будемо ли имали среће, још се можемо нагодити за безбједан пролаз одавдје."
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1474
@@ -5268,7 +5267,7 @@ msgstr ""
 "Шшшш, вас двије. Да, наравно, били бисмо почаствовани да сретнемо и упознамо "
 "вашег краља. Али прво, оставили смо много наших назад до улаза у велику "
 "пећину гдје смо вас први пут срели, и бојим се да те пећине ни сада нису "
-"безбиједне. Можете ли нам помоћи да допратимо наш народ на сигурно?"
+"безбједне. Можете ли нам помоћи да допратимо наш народ на сигурно?"
 
 #. [message]: speaker=Grimnir
 #: data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg:2232
@@ -5282,9 +5281,9 @@ msgid ""
 msgstr ""
 "Хммм, да, послије свега што сте учинили, морали бисмо нешто приредити. Имамо "
 "неколико већих дворана који би могле бити склониште вашима, мало "
-"тјескобније, али безбиједне. Од како сте стигли, неки од нас пазе на ваш "
+"тјескобније, али безбједне. Од како сте стигли, неки од нас пазе на ваш "
 "народ; сакрили сте их на добар одбрамбени положај, али никад се не зна. "
-"Извијестићу их да поведу ваше на безбиједно. Свакако не желимо никаква "
+"Извијестићу их да поведу ваше на безбједно. Свакако не желимо никаква "
 "изненађења."
 
 #. [message]: speaker=Kaleh
@@ -5918,7 +5917,7 @@ msgstr ""
 "Шшшш, вас две. Да, наравно, били бисмо почаствовани да сретнемо и упознамо "
 "Великог вођу. Али прво, оставили смо много наших назад до улаза у велику "
 "пећину гдје смо вас први пут срели, и бојим се да те пећине ни сада нису "
-"безбиједне. Можете ли нам помоћи да допратимо наш народ на сигурно?"
+"безбједне. Можете ли нам помоћи да допратимо наш народ на сигурно?"
 
 #. [message]: speaker=Zurg
 #: data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg:2060
@@ -7972,7 +7971,7 @@ msgid ""
 "must get our people to safety."
 msgstr ""
 "Калех, немамо времена за испитивање. Вода и даље расте, морамо извести народ "
-"на безбиједно."
+"на безбједно."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:3641
@@ -9115,8 +9114,8 @@ msgid ""
 "Good. We're safe for now. We just have to defeat Durstrag before he sends "
 "another messenger for reinforcements."
 msgstr ""
-"Врло добро. Безбиједни смо за сада. Само морамо поразити Дурстрага прије "
-"него пошаље још гласника по појачања."
+"Врло добро. Безбједни смо за сада. Само морамо поразити Дурстрага прије него "
+"пошаље још гласника по појачања."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:5551
@@ -9246,7 +9245,7 @@ msgid ""
 msgstr ""
 "Док сам извиђала около, мислим да сам видјела малу оазу у близини улаза у "
 "долину. Ако се премјестимо тамо, требало би да будемо изван домашаја "
-"немртвима. Мислим да ће то бити безбиједно одмориште, бар накратко."
+"немртвима. Мислим да ће то бити безбједно одмориште, бар накратко."
 
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:5668
@@ -9257,7 +9256,7 @@ msgid ""
 msgstr ""
 "Заиста, немртви духови као ови често су везани за мјеста на којима су умрли: "
 "што се више удаљимо, то су они слабији. Тако да ако се уклонимо из "
-"непосредне близине, требало би да будемо прилично безбиједни."
+"непосредне близине, требало би да будемо прилично безбједни."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:5673
@@ -11200,7 +11199,7 @@ msgid ""
 msgstr ""
 "Четири се брода налазе у ували. Када заробите сва четири, помоћи ћемо вам да "
 "њима испловите на отворено море, у слободу. Затим можемо пристати уз обалу "
-"гдје ће чекати остатак вашег народа, на безбиједном растојању од људи, и "
+"гдје ће чекати остатак вашег народа, на безбједном растојању од људи, и "
 "укрцати их све. Али, имајте на уму, потребна су нам сва четири брода да би "
 "се сав народ укрцао."
 
@@ -11417,7 +11416,7 @@ msgid ""
 "enemies and blow these ships to safety!"
 msgstr ""
 "Онда, позивам вјетрове под руком Морског бога. Нека збуне непријатеље наше, "
-"и одувају нам бродове у безбиједност!"
+"и одувају нам бродове у безбједност!"
 
 #. [scenario]: id=10_Speaking_with_the_Fishes
 #: data/campaigns/Under_the_Burning_Suns/scenarios/10_Speaking_with_the_Fishes.cfg:6
@@ -11696,7 +11695,7 @@ msgstr ""
 "ланац острва који су некада населили неки људи из Веснота. Током Златног "
 "доба бродови често испловљаваше одатле ка копну, носећи робу и вијести. "
 "Очигледно, острвску насеобину водила је дружина магова, која је жељела "
-"безбиједно подручје за извођење својих опита. Заштићени својом магијом и "
+"безбједно подручје за извођење својих опита. Заштићени својом магијом и "
 "скрајношћу, ови насељеници одржали су се дуже него већина других по паду "
 "царства. Шта се са њима на концу збило не знамо тачно, али прије много "
 "година моји сународници открише рушевине њихових настамби. Док смо их "
@@ -12314,7 +12313,7 @@ msgid ""
 "not think there will be many safe places left in the known lands."
 msgstr ""
 "Учинићу како тражите. Толико је поштено. Али ако бој пође лоше, мислим да "
-"неће остати много безбиједних станишта у познатим земљама."
+"неће остати много безбједних станишта у познатим земљама."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/10_Speaking_with_the_Fishes.cfg:619
@@ -12397,7 +12396,7 @@ msgid ""
 "nearby lands."
 msgstr ""
 "И тако, док се остатак земаља утапао у таму и хаос, Весмерска шума бијеше "
-"једно од малобројних острва мира и безбиједности. Али се Жангор све више "
+"једно од малобројних острва мира и безбједности. Али се Жангор све више "
 "поигравао са страховима вилењака, и тражио још од својих сљедбеника. "
 "Прогласио је да су сви други вилењаци јеретици, и да не заслужују да живе. "
 "Тако да весмерски вилењаци нудише уточиште избјеглицама, а затим их "
@@ -12634,7 +12633,7 @@ msgid ""
 "other ships will be safe hidden out in the deep water."
 msgstr ""
 "Магла и тмина заклањају ово мјесто, али то можемо употријебити себи у "
-"предност. Други бродови ће бити безбиједно скривени у дубоким водама."
+"предност. Други бродови ће бити безбједно скривени у дубоким водама."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg:691
@@ -12645,8 +12644,8 @@ msgid ""
 "people, we can bring the rest of them in and start fighting in earnest."
 msgstr ""
 "Треба да нађемо утврђење прије него што искрцамо остале. Не свиђа ми се "
-"замисао искрцавања свих прије него што обезбедимо тврђаву као залеђину. "
-"Окружени маглом, у овом тренутку су на безбиједном. Чим одредимо мјесто за "
+"замисао искрцавања свих прије него што обезбиједимо тврђаву као залеђину. "
+"Окружени маглом, у овом тренутку су на безбједном. Чим одредимо мјесто за "
 "окупљање, искрцаћемо остале и започети борбу свом снагом."
 
 #. [message]: race=merman
@@ -16143,8 +16142,8 @@ msgid ""
 "silently and quickly through a maze of secret tunnels towards the Dwarves' "
 "home."
 msgstr ""
-"Поглавље 7: Брзо се вратисмо и нађосмо свој народ на безбиједном, како смо "
-"их и сакрили прије борбе. Како видјеше Гримнира уз нас, дружина патуљака "
+"Поглавље 7: Брзо се вратисмо и нађосмо свој народ на безбједном, како смо их "
+"и сакрили прије борбе. Како видјеше Гримнира уз нас, дружина патуљака "
 "нечујно се окупи из тајних прилаза. Пошто смо раширили међу осталим "
 "вилењацима да су патуљци пријатељи, Гримнир нас брзо и у тишини поведе кроз "
 "лавиринт тајних ходника, ка дому патуљака."
@@ -16181,7 +16180,7 @@ msgstr ""
 "Патуљци нас спроведоше на удаљени крај град, гдје су нам препустили неколико "
 "помоћних пећина, које су нормално биле намијењене складиштењу, за привремени "
 "боравак. Смјештај је био помало тјескобан, али по први пут откако смо "
-"заронили под земљу, осјетих се на безбиједном."
+"заронили под земљу, осјетих се на безбједном."
 
 #. [part]
 #: data/campaigns/Under_the_Burning_Suns/utils/storytxt.cfg:134
@@ -16213,7 +16212,7 @@ msgid ""
 "the elves that the trolls were our allies, Zurg led us silently and quickly "
 "away from the front lines through a maze of secret tunnels."
 msgstr ""
-"Поглавље 7: Брзо се вратисмо и нађосмо наш народ на безбиједном, како смо их "
+"Поглавље 7: Брзо се вратисмо и нађосмо наш народ на безбједном, како смо их "
 "и сакрили прије борбе. Пошто смо раширили међу осталим вилењацима да су "
 "тролови наши савезници, Зург нас брзо и у тишини поведе даље од борбених "
 "редова, кроз лавиринт тајних ходника."
@@ -16277,7 +16276,7 @@ msgid ""
 msgstr ""
 "Волио бих да сам могао више времена провести учећи о овим погрешно схваћеним "
 "створењима, али нисмо се могли дуго задржавати. Чак и под заштитом тролова, "
-"усред овог великог рата, бојао сам се за безбиједност свог народа. И тако, "
+"усред овог великог рата, бојао сам се за безбједност свог народа. И тако, "
 "неколико дана касније, испословах пријем код Великог вођа."
 
 #. [part]
@@ -16529,7 +16528,7 @@ msgid ""
 msgstr ""
 "Али је Жул била у праву. Ако смо и превалили сав пут само да бисмо помогли "
 "морејцима да поразе Јехнагот, наше путовање није било узалудно. Трагали смо "
-"за новим домом, безбиједним од ужаса и смртоносне пустиње, али се сада ова "
+"за новим домом, безбједним од ужаса и смртоносне пустиње, али се сада ова "
 "борба чинила важнијом. Могу ли заиста ова острва постати дом мом народу? "
 "Изглед толико диван да бих се усудио надати му се. Гарак, Кератур, "
 "Танстафал, све те напаћене душе које смо оставили за собом, и многи други "
