--- a/po/wesnoth-utbs/sr@ijekavianlatin.po
+++ b/po/wesnoth-utbs/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-utbs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-26 15:39+0100\n"
-"PO-Revision-Date: 2010-03-05 01:53+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 "X-Generator: Kate\n"
@@ -73,9 +73,8 @@ msgstr "pustinjski tumarač"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:27
-#, fuzzy
 msgid "(Expert level, 11 scenarios.)"
-msgstr "(Znalački nivo, 11 scenarija.)\n"
+msgstr "(Znalački nivo, 11 scenarija.)"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:27
@@ -636,7 +635,7 @@ msgstr "Naru"
 #. [message]: speaker=Naru
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:799
 msgid "Is it safe to come out? I was so scared."
-msgstr "Je li bezbijedno izaći? Takav me je strah obuzeo."
+msgstr "Je li bezbjedno izaći? Takav me je strah obuzeo."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/01_The_Morning_After.cfg:803
@@ -1313,7 +1312,7 @@ msgid ""
 "strength and rest safely on the grass during the heat of the day."
 msgstr ""
 "Gledajte, oaza! Njena osvežavajuća voda obnoviće snagu našim ljudima, i "
-"pružiti bezbijedan odmor na travi tokom vrelog dana."
+"pružiti bezbjedan odmor na travi tokom vrelog dana."
 
 #. [scenario]: id=2_Across_the_Harsh_Sands, role=Hunting Ogre, role=Hunting Ogre
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:838
@@ -1670,7 +1669,7 @@ msgid ""
 "There's no way we can get all our people safely across the desert with "
 "outlaws harassing us. We must defeat them before we can continue."
 msgstr ""
-"Nema načina da bezbijedno sprovedemo sav narod preko pustinje uz odmetnike "
+"Nema načina da bezbjedno sprovedemo sav narod preko pustinje uz odmetnike "
 "koji nas šikaniraju. Moramo ih svladati prije nego nastavimo."
 
 #. [message]: speaker=$explorer.id
@@ -1784,7 +1783,7 @@ msgid ""
 "must deal with the Black Hand before we can progress further."
 msgstr ""
 "Odmetnici Crne ruke i dalje prijete drugima. Dok je njihov vođ na nogama, ne "
-"možemo se bezbijedno kretati peskom. Moramo se riješiti Crne ruke prije nego "
+"možemo se bezbjedno kretati peskom. Moramo se riješiti Crne ruke prije nego "
 "što možemo nastaviti put."
 
 #. [message]: speaker=Kaleh
@@ -3154,8 +3153,8 @@ msgstr ""
 "otvorenom pijesku. Pored toga, poslije skorašnjih gubitaka, nemamo više "
 "brojnu prednost koju smo ranije imali. Zato moramo biti izuzetno oprezni. Pa "
 "ipak, ako smognemo raščistiti putanju kroz brda pred nama, dobri su nam "
-"izgledi da bezbijedno sprovedemo narod u tunele. Uz malo nade, pod zemljom "
-"će nam biti lakše da ih zaštitimo nego na otvorenom."
+"izgledi da bezbjedno sprovedemo narod u tunele. Uz malo nade, pod zemljom će "
+"nam biti lakše da ih zaštitimo nego na otvorenom."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:553
@@ -3578,7 +3577,7 @@ msgstr ""
 "Predugo nam je trebalo da uvedemo narod u tunele! Još orkovskih snaga "
 "pristiže preko brda sa istoka i zapada, i opkoljava nas. Nema načina da "
 "pobijemo tolike orke i gobline. Više nema nade da ćemo se dokopati "
-"bezbijednosti."
+"bezbjednosti."
 
 #. [scenario]: id=5_A_Subterranean_Struggle
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:8
@@ -4112,7 +4111,7 @@ msgid ""
 "But even if we do, what about all of our people? How can we safely escort "
 "them through this war zone?"
 msgstr ""
-"Ali čak i ako tako učinimo, šta s našim narodom? Kako ćemo ih bezbijedno "
+"Ali čak i ako tako učinimo, šta s našim narodom? Kako ćemo ih bezbjedno "
 "provesti kroz ovaj ratni pojas?"
 
 #. [message]: speaker=Kaleh
@@ -4127,7 +4126,7 @@ msgstr ""
 "I nećemo. Ako zadržimo najveći broj vilenjaka sakriven nazad u prolazima, to "
 "bi trebalo da ih zaštiti bar na neko vrijeme. U međuvremenu, mi ćemo krenuti "
 "naprijed i pokušati da razriješimo ovu zbrku. Mislim da pravo kažeš, Žul, "
-"budemo li imali sreće, još se možemo nagoditi za bezbijedan prolaz odavdje."
+"budemo li imali sreće, još se možemo nagoditi za bezbjedan prolaz odavdje."
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1474
@@ -5275,7 +5274,7 @@ msgstr ""
 "Šššš, vas dvije. Da, naravno, bili bismo počastvovani da sretnemo i upoznamo "
 "vašeg kralja. Ali prvo, ostavili smo mnogo naših nazad do ulaza u veliku "
 "pećinu gdje smo vas prvi put sreli, i bojim se da te pećine ni sada nisu "
-"bezbijedne. Možete li nam pomoći da dopratimo naš narod na sigurno?"
+"bezbjedne. Možete li nam pomoći da dopratimo naš narod na sigurno?"
 
 #. [message]: speaker=Grimnir
 #: data/campaigns/Under_the_Burning_Suns/scenarios/06a_In_the_Tunnels_of_Trolls.cfg:2232
@@ -5289,9 +5288,9 @@ msgid ""
 msgstr ""
 "Hmmm, da, poslije svega što ste učinili, morali bismo nešto prirediti. Imamo "
 "nekoliko većih dvorana koji bi mogle biti sklonište vašima, malo "
-"tjeskobnije, ali bezbijedne. Od kako ste stigli, neki od nas paze na vaš "
+"tjeskobnije, ali bezbjedne. Od kako ste stigli, neki od nas paze na vaš "
 "narod; sakrili ste ih na dobar odbrambeni položaj, ali nikad se ne zna. "
-"Izvijestiću ih da povedu vaše na bezbijedno. Svakako ne želimo nikakva "
+"Izvijestiću ih da povedu vaše na bezbjedno. Svakako ne želimo nikakva "
 "iznenađenja."
 
 #. [message]: speaker=Kaleh
@@ -5926,7 +5925,7 @@ msgstr ""
 "Šššš, vas dve. Da, naravno, bili bismo počastvovani da sretnemo i upoznamo "
 "Velikog vođu. Ali prvo, ostavili smo mnogo naših nazad do ulaza u veliku "
 "pećinu gdje smo vas prvi put sreli, i bojim se da te pećine ni sada nisu "
-"bezbijedne. Možete li nam pomoći da dopratimo naš narod na sigurno?"
+"bezbjedne. Možete li nam pomoći da dopratimo naš narod na sigurno?"
 
 #. [message]: speaker=Zurg
 #: data/campaigns/Under_the_Burning_Suns/scenarios/06b_In_the_Domain_of_Dwarves.cfg:2060
@@ -7985,7 +7984,7 @@ msgid ""
 "must get our people to safety."
 msgstr ""
 "Kaleh, nemamo vremena za ispitivanje. Voda i dalje raste, moramo izvesti "
-"narod na bezbijedno."
+"narod na bezbjedno."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:3641
@@ -9133,8 +9132,8 @@ msgid ""
 "Good. We're safe for now. We just have to defeat Durstrag before he sends "
 "another messenger for reinforcements."
 msgstr ""
-"Vrlo dobro. Bezbijedni smo za sada. Samo moramo poraziti Durstraga prije "
-"nego pošalje još glasnika po pojačanja."
+"Vrlo dobro. Bezbjedni smo za sada. Samo moramo poraziti Durstraga prije nego "
+"pošalje još glasnika po pojačanja."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:5551
@@ -9264,7 +9263,7 @@ msgid ""
 msgstr ""
 "Dok sam izviđala okolo, mislim da sam vidjela malu oazu u blizini ulaza u "
 "dolinu. Ako se premjestimo tamo, trebalo bi da budemo izvan domašaja "
-"nemrtvima. Mislim da će to biti bezbijedno odmorište, bar nakratko."
+"nemrtvima. Mislim da će to biti bezbjedno odmorište, bar nakratko."
 
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:5668
@@ -9275,7 +9274,7 @@ msgid ""
 msgstr ""
 "Zaista, nemrtvi duhovi kao ovi često su vezani za mjesta na kojima su umrli: "
 "što se više udaljimo, to su oni slabiji. Tako da ako se uklonimo iz "
-"neposredne blizine, trebalo bi da budemo prilično bezbijedni."
+"neposredne blizine, trebalo bi da budemo prilično bezbjedni."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:5673
@@ -11222,7 +11221,7 @@ msgid ""
 msgstr ""
 "Četiri se broda nalaze u uvali. Kada zarobite sva četiri, pomoći ćemo vam da "
 "njima isplovite na otvoreno more, u slobodu. Zatim možemo pristati uz obalu "
-"gdje će čekati ostatak vašeg naroda, na bezbijednom rastojanju od ljudi, i "
+"gdje će čekati ostatak vašeg naroda, na bezbjednom rastojanju od ljudi, i "
 "ukrcati ih sve. Ali, imajte na umu, potrebna su nam sva četiri broda da bi "
 "se sav narod ukrcao."
 
@@ -11440,7 +11439,7 @@ msgid ""
 "enemies and blow these ships to safety!"
 msgstr ""
 "Onda, pozivam vjetrove pod rukom Morskog boga. Neka zbune neprijatelje naše, "
-"i oduvaju nam brodove u bezbijednost!"
+"i oduvaju nam brodove u bezbjednost!"
 
 #. [scenario]: id=10_Speaking_with_the_Fishes
 #: data/campaigns/Under_the_Burning_Suns/scenarios/10_Speaking_with_the_Fishes.cfg:6
@@ -11721,7 +11720,7 @@ msgstr ""
 "lanac ostrva koji su nekada naselili neki ljudi iz Vesnota. Tokom Zlatnog "
 "doba brodovi često isplovljavaše odatle ka kopnu, noseći robu i vijesti. "
 "Očigledno, ostrvsku naseobinu vodila je družina magova, koja je željela "
-"bezbijedno područje za izvođenje svojih opita. Zaštićeni svojom magijom i "
+"bezbjedno područje za izvođenje svojih opita. Zaštićeni svojom magijom i "
 "skrajnošću, ovi naseljenici održali su se duže nego većina drugih po padu "
 "carstva. Šta se sa njima na koncu zbilo ne znamo tačno, ali prije mnogo "
 "godina moji sunarodnici otkriše ruševine njihovih nastambi. Dok smo ih "
@@ -12340,7 +12339,7 @@ msgid ""
 "not think there will be many safe places left in the known lands."
 msgstr ""
 "Učiniću kako tražite. Toliko je pošteno. Ali ako boj pođe loše, mislim da "
-"neće ostati mnogo bezbijednih staništa u poznatim zemljama."
+"neće ostati mnogo bezbjednih staništa u poznatim zemljama."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/10_Speaking_with_the_Fishes.cfg:619
@@ -12423,7 +12422,7 @@ msgid ""
 "nearby lands."
 msgstr ""
 "I tako, dok se ostatak zemalja utapao u tamu i haos, Vesmerska šuma biješe "
-"jedno od malobrojnih ostrva mira i bezbijednosti. Ali se Žangor sve više "
+"jedno od malobrojnih ostrva mira i bezbjednosti. Ali se Žangor sve više "
 "poigravao sa strahovima vilenjaka, i tražio još od svojih sljedbenika. "
 "Proglasio je da su svi drugi vilenjaci jeretici, i da ne zaslužuju da žive. "
 "Tako da vesmerski vilenjaci nudiše utočište izbjeglicama, a zatim ih "
@@ -12660,7 +12659,7 @@ msgid ""
 "other ships will be safe hidden out in the deep water."
 msgstr ""
 "Magla i tmina zaklanjaju ovo mjesto, ali to možemo upotrijebiti sebi u "
-"prednost. Drugi brodovi će biti bezbijedno skriveni u dubokim vodama."
+"prednost. Drugi brodovi će biti bezbjedno skriveni u dubokim vodama."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/11_Battle_for_Zocthanol_Isle.cfg:691
@@ -12671,8 +12670,8 @@ msgid ""
 "people, we can bring the rest of them in and start fighting in earnest."
 msgstr ""
 "Treba da nađemo utvrđenje prije nego što iskrcamo ostale. Ne sviđa mi se "
-"zamisao iskrcavanja svih prije nego što obezbedimo tvrđavu kao zaleđinu. "
-"Okruženi maglom, u ovom trenutku su na bezbijednom. Čim odredimo mjesto za "
+"zamisao iskrcavanja svih prije nego što obezbijedimo tvrđavu kao zaleđinu. "
+"Okruženi maglom, u ovom trenutku su na bezbjednom. Čim odredimo mjesto za "
 "okupljanje, iskrcaćemo ostale i započeti borbu svom snagom."
 
 #. [message]: race=merman
@@ -16176,7 +16175,7 @@ msgid ""
 "silently and quickly through a maze of secret tunnels towards the Dwarves' "
 "home."
 msgstr ""
-"Poglavlje 7: Brzo se vratismo i nađosmo svoj narod na bezbijednom, kako smo "
+"Poglavlje 7: Brzo se vratismo i nađosmo svoj narod na bezbjednom, kako smo "
 "ih i sakrili prije borbe. Kako vidješe Grimnira uz nas, družina patuljaka "
 "nečujno se okupi iz tajnih prilaza. Pošto smo raširili među ostalim "
 "vilenjacima da su patuljci prijatelji, Grimnir nas brzo i u tišini povede "
@@ -16214,7 +16213,7 @@ msgstr ""
 "Patuljci nas sprovedoše na udaljeni kraj grad, gdje su nam prepustili "
 "nekoliko pomoćnih pećina, koje su normalno bile namijenjene skladištenju, za "
 "privremeni boravak. Smještaj je bio pomalo tjeskoban, ali po prvi put otkako "
-"smo zaronili pod zemlju, osjetih se na bezbijednom."
+"smo zaronili pod zemlju, osjetih se na bezbjednom."
 
 #. [part]
 #: data/campaigns/Under_the_Burning_Suns/utils/storytxt.cfg:134
@@ -16246,8 +16245,8 @@ msgid ""
 "the elves that the trolls were our allies, Zurg led us silently and quickly "
 "away from the front lines through a maze of secret tunnels."
 msgstr ""
-"Poglavlje 7: Brzo se vratismo i nađosmo naš narod na bezbijednom, kako smo "
-"ih i sakrili prije borbe. Pošto smo raširili među ostalim vilenjacima da su "
+"Poglavlje 7: Brzo se vratismo i nađosmo naš narod na bezbjednom, kako smo ih "
+"i sakrili prije borbe. Pošto smo raširili među ostalim vilenjacima da su "
 "trolovi naši saveznici, Zurg nas brzo i u tišini povede dalje od borbenih "
 "redova, kroz lavirint tajnih hodnika."
 
@@ -16310,7 +16309,7 @@ msgid ""
 msgstr ""
 "Volio bih da sam mogao više vremena provesti učeći o ovim pogrešno shvaćenim "
 "stvorenjima, ali nismo se mogli dugo zadržavati. Čak i pod zaštitom trolova, "
-"usred ovog velikog rata, bojao sam se za bezbijednost svog naroda. I tako, "
+"usred ovog velikog rata, bojao sam se za bezbjednost svog naroda. I tako, "
 "nekoliko dana kasnije, isposlovah prijem kod Velikog vođa."
 
 #. [part]
@@ -16562,7 +16561,7 @@ msgid ""
 msgstr ""
 "Ali je Žul bila u pravu. Ako smo i prevalili sav put samo da bismo pomogli "
 "morejcima da poraze Jehnagot, naše putovanje nije bilo uzaludno. Tragali smo "
-"za novim domom, bezbijednim od užasa i smrtonosne pustinje, ali se sada ova "
+"za novim domom, bezbjednim od užasa i smrtonosne pustinje, ali se sada ova "
 "borba činila važnijom. Mogu li zaista ova ostrva postati dom mom narodu? "
 "Izgled toliko divan da bih se usudio nadati mu se. Garak, Keratur, "
 "Tanstafal, sve te napaćene duše koje smo ostavili za sobom, i mnogi drugi "
