--- a/po/wesnoth/sr@ijekavianlatin.po
+++ b/po/wesnoth/sr@ijekavianlatin.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-02 12:40+0200\n"
-"PO-Revision-Date: 2010-03-15 22:39+0100\n"
+"PO-Revision-Date: 2010-04-08 21:45+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Associated-UI-Catalogs: wesnoth-lib wesnoth-httt\n"
 "X-Wrapping: fine\n"
@@ -5176,9 +5176,8 @@ msgstr "starost"
 
 #. [trait]: id=aged
 #: data/core/macros/traits.cfg:222
-#, fuzzy
 msgid "female^aged"
-msgstr "priglupost"
+msgstr "starost"
 
 #. [color_range]: id=red
 #. [color_range]: id=1
@@ -6975,9 +6974,8 @@ msgid "Victory:"
 msgstr "pobjeda:"
 
 #: data/lua/wml-tags.lua:25
-#, fuzzy
 msgid "Defeat:"
-msgstr "Poraz"
+msgstr "poraz:"
 
 #: data/temp-file_send_data_strings.cfg:12
 msgid "About to upload statistics - Help us make Wesnoth better for you!"
@@ -7199,11 +7197,11 @@ msgstr "U zamku nema više slobodnih polja za novopridošle jedinice."
 
 #: src/actions.cpp:532 src/actions.cpp:591 src/actions.cpp:1522
 msgid "An invalid attacker weapon got selected."
-msgstr "Izabrano je nevaljano oružje za napadača."
+msgstr "Izabrano je loše oružje za napadača."
 
 #: src/actions.cpp:537
 msgid "An invalid defender weapon got selected."
-msgstr "Izabrano je nevaljano oružje za branioca."
+msgstr "Izabrano je loše oružje za branioca."
 
 #: src/actions.cpp:1280
 msgid "female^poisoned"
@@ -7387,8 +7385,7 @@ msgstr "Preuzimam dodatak: $addon_title|..."
 #: src/addon_management.cpp:652
 msgid ""
 "The add-on has an invalid file or directory name and can not be installed."
-msgstr ""
-"Dodatak nema valjano ime datoteke ili fascikle i ne može se instalirati."
+msgstr "Dodatak ima loše ime datoteke ili fascikle i ne može se instalirati."
 
 #: src/addon_management.cpp:701
 msgid "The add-on '$addon_title|' has been successfully installed."
@@ -7672,7 +7669,7 @@ msgstr "%a %b %d %H.%M %Y"
 
 #: src/dialogs.cpp:444
 msgid "#(Invalid)"
-msgstr "#(nevaljano)"
+msgstr "#(loše)"
 
 #: src/dialogs.cpp:462
 msgid "Campaign: $campaign_name"
@@ -7891,7 +7888,7 @@ msgstr "Učitavam naslovni ekran."
 
 #: src/game_config.cpp:287
 msgid "Invalid color range: "
-msgstr "Nevaljan opseg boja: "
+msgstr "Loš opseg boja: "
 
 #: src/game_events.cpp:204
 msgid "Error: "
@@ -8580,6 +8577,8 @@ msgid ""
 "Unknown command '$command', try $help_command for a list of available "
 "commands."
 msgstr ""
+"Nepoznata naredba ‘$command’ (sa $help_command dobijate spisak dostupnih "
+"naredbi)."
 
 #: src/menu_events.cpp:1952
 msgid ""
@@ -8591,53 +8590,53 @@ msgstr ""
 
 #: src/menu_events.cpp:1954
 msgid "do not translate the 'all'^[all|<command>]"
-msgstr ""
+msgstr "[all|<naredba>]"
 
 #: src/menu_events.cpp:1998
-#, fuzzy
 msgid "Error:"
-msgstr "Greška: "
+msgstr "Greška:"
 
 #: src/menu_events.cpp:2004
 msgid "Missing argument $arg_id"
-msgstr ""
+msgstr "Nedostaje argument $arg_id"
 
 #: src/menu_events.cpp:2052
 msgid ""
 "Available commands $flags_description:\n"
 "$list_of_commands"
 msgstr ""
+"Dostupne naredbe $flags_description:\n"
+"$list_of_commands"
 
 #: src/menu_events.cpp:2052 src/menu_events.cpp:2053 src/menu_events.cpp:2076
-#, fuzzy
 msgid "help"
-msgstr "Pomoć"
+msgstr "pomoć"
 
 #: src/menu_events.cpp:2053
 msgid "Type $help_command <command> for more info."
-msgstr ""
+msgstr "Upišite $help_command <naredba> za više detalja."
 
 #: src/menu_events.cpp:2064
 msgid " No help available."
 msgstr " Pomoć nije dostupna."
 
 #: src/menu_events.cpp:2069
-#, fuzzy
 msgid "Usage:"
-msgstr "poruka:"
+msgstr "Upotreba:"
 
 #: src/menu_events.cpp:2074
 msgid "aliases:"
-msgstr ""
+msgstr "alijasi:"
 
+# well-spelled: админ
 #: src/menu_events.cpp:2200
 msgid "(A) - admin command"
-msgstr ""
+msgstr "(A) — admin. naredba"
 
+# well-spelled: админ
 #: src/menu_events.cpp:2207 src/menu_events.cpp:2405
-#, fuzzy
 msgid "(admin only)"
-msgstr "Samo timski"
+msgstr "(samo admin.)"
 
 #: src/menu_events.cpp:2227
 msgid ""
@@ -8658,7 +8657,7 @@ msgstr ""
 #: src/menu_events.cpp:2239 src/menu_events.cpp:2241 src/menu_events.cpp:2266
 #: src/menu_events.cpp:2268 src/menu_events.cpp:2270 src/menu_events.cpp:2284
 msgid "<nick>"
-msgstr ""
+msgstr "<nadimak>"
 
 #: src/menu_events.cpp:2234
 msgid "Unban a user. He does not have to be in the game but on the server."
@@ -8685,9 +8684,8 @@ msgid "Send a message to the server admins currently online"
 msgstr "Šalje poruku administratorima servera trenutno na vezi."
 
 #: src/menu_events.cpp:2255
-#, fuzzy
 msgid "<message>"
-msgstr "poruka:"
+msgstr "<poruka>"
 
 #: src/menu_events.cpp:2255
 msgid "Send an emotion or personal action in chat."
@@ -8703,11 +8701,11 @@ msgstr ""
 
 #: src/menu_events.cpp:2260
 msgid "<nick> <message>"
-msgstr ""
+msgstr "<nadimak> <poruka>"
 
 #: src/menu_events.cpp:2264
 msgid "<level> <domain>"
-msgstr ""
+msgstr "<nivo> <domen>"
 
 #: src/menu_events.cpp:2264
 msgid "Change the log level of a log domain."
@@ -8735,7 +8733,7 @@ msgstr "Prikazuje podatak o verziji."
 
 #: src/menu_events.cpp:2277
 msgid "<password> <email (optional)>"
-msgstr ""
+msgstr "<lozinka> <e-pošta (opciono)>"
 
 #: src/menu_events.cpp:2277
 msgid "Register your nick"
@@ -8751,7 +8749,7 @@ msgstr "Ažurira detalje vašeg nadimka. Za moguće detalje, izvršiti „/detai
 
 #: src/menu_events.cpp:2282
 msgid "<detail> <value>"
-msgstr ""
+msgstr "<detalj> <vrednost>"
 
 #: src/menu_events.cpp:2284
 msgid "Request information about a nick."
@@ -8763,7 +8761,7 @@ msgstr "Zahtijeva spisak detalja koje možete zadati uz registrovani nadimak."
 
 #: src/menu_events.cpp:2288 src/menu_events.cpp:2291 src/menu_events.cpp:2293
 msgid "<room>"
-msgstr ""
+msgstr "<soba>"
 
 #: src/menu_events.cpp:2288
 msgid "Join a room."
@@ -8783,7 +8781,7 @@ msgstr "Nabroji dostupne sobe."
 
 #: src/menu_events.cpp:2297
 msgid "<room> <msg>"
-msgstr ""
+msgstr "<soba> <poruka>"
 
 #: src/menu_events.cpp:2297
 msgid "Room message."
@@ -8791,25 +8789,24 @@ msgstr "Poruka sobe."
 
 #: src/menu_events.cpp:2299
 msgid "<room> <type> [value]"
-msgstr ""
+msgstr "<soba> <tip> [vrednost]"
 
 #: src/menu_events.cpp:2299
 msgid "Room query."
 msgstr "Upit sobe."
 
+# well-spelled: админ
 #: src/menu_events.cpp:2397
 msgid "(D) - debug only, (N) - network only, (A) - admin only"
-msgstr ""
+msgstr "(D) — samo ispravljanje, (N) — samo mreža, (A) — samo admin"
 
 #: src/menu_events.cpp:2403
-#, fuzzy
 msgid "(debug command)"
-msgstr "Ispravljačke naredbe"
+msgstr "(ispravljačka naredba)"
 
 #: src/menu_events.cpp:2404
-#, fuzzy
 msgid "(network only)"
-msgstr "mrežni igrač"
+msgstr "(samo mreža)"
 
 #: src/menu_events.cpp:2429
 msgid "Refresh gui."
@@ -8821,11 +8818,11 @@ msgstr "Daje ili oduzima upravljanje stranom VI."
 
 #: src/menu_events.cpp:2431
 msgid "do not translate the on/off^[<side> [on/off]]"
-msgstr ""
+msgstr "[<strana> [on/off]]"
 
 #: src/menu_events.cpp:2434
 msgid "<side> <nick>"
-msgstr ""
+msgstr "<strana> <nadimak>"
 
 #: src/menu_events.cpp:2434
 msgid "Assign control of a side to a different player or observer."
@@ -8840,9 +8837,8 @@ msgid "Visualize the screen refresh procedure."
 msgstr "Sagledava postupak osvježavanja ekrana."
 
 #: src/menu_events.cpp:2439
-#, fuzzy
 msgid "Show fps."
-msgstr "Pusti snimak"
+msgstr "Prikazuje broj kadrova u sekundi."
 
 #: src/menu_events.cpp:2441
 msgid "Save game."
@@ -8866,7 +8862,7 @@ msgstr "Isključuje autopozicije."
 
 #: src/menu_events.cpp:2454
 msgid "<id>"
-msgstr ""
+msgstr "<id>"
 
 #: src/menu_events.cpp:2454
 msgid "Advance to the next scenario, or scenario identified by 'id'"
@@ -8890,7 +8886,7 @@ msgstr "Izvršava луа iskaz."
 
 #: src/menu_events.cpp:2466
 msgid "<command>[;<command>...]"
-msgstr ""
+msgstr "<naredba>[;<naredba>...]"
 
 #: src/menu_events.cpp:2466
 msgid "Set the command used by the custom command hotkey"
@@ -8902,7 +8898,7 @@ msgstr "Pokreće ispitivač stanja igre."
 
 #: src/menu_events.cpp:2470
 msgid "<name>[=<command>]"
-msgstr ""
+msgstr "<ime>[=<naredba>]"
 
 #: src/menu_events.cpp:2470
 msgid "Set or show alias to a command"
@@ -8910,7 +8906,7 @@ msgstr "Postavlja ili prikazuje alijas naredbe."
 
 #: src/menu_events.cpp:2472
 msgid "<var>=<value>"
-msgstr ""
+msgstr "<promenljiva>=<vrednost>"
 
 #: src/menu_events.cpp:2472
 msgid "Set a scenario variable."
@@ -8918,7 +8914,7 @@ msgstr "Postavlja promenljivu scenarija."
 
 #: src/menu_events.cpp:2474
 msgid "<var>"
-msgstr ""
+msgstr "<promenljiva>"
 
 #: src/menu_events.cpp:2474
 msgid "Show a scenario variable."
@@ -8979,11 +8975,11 @@ msgstr "Domen prebačen: ‘$domain|’ na nivo: ‘$level|’."
 
 #: src/menu_events.cpp:2635
 msgid "whisper to $receiver"
-msgstr ""
+msgstr "šapat za $receiver"
 
 #: src/menu_events.cpp:2642
 msgid "whisper: $sender"
-msgstr ""
+msgstr "šapat: $sender"
 
 #: src/menu_events.cpp:2738 src/menu_events.cpp:2757
 #: src/multiplayer_connect.cpp:699
@@ -8991,83 +8987,74 @@ msgid "(empty)"
 msgstr "(prazno)"
 
 #: src/menu_events.cpp:2738 src/menu_events.cpp:2744 src/menu_events.cpp:2794
-#, fuzzy
 msgid "ignores list"
-msgstr "na spisku ignorisanih"
+msgstr "spisak ignorisanih"
 
 #: src/menu_events.cpp:2744
-#, fuzzy
 msgid "Added to ignore list: $nick"
-msgstr "Dodat na spisak ignorisanih: "
+msgstr "Dodat na spisak ignorisanih: $nick"
 
 #: src/menu_events.cpp:2747 src/menu_events.cpp:2766
-#, fuzzy
 msgid "Invalid username: $nick"
-msgstr "Nevaljano korisničko ime: "
+msgstr "Loše korisničko ime: $nick"
 
 #: src/menu_events.cpp:2757 src/menu_events.cpp:2764 src/menu_events.cpp:2790
-#, fuzzy
 msgid "friends list"
-msgstr "na spisku prijatelja"
+msgstr "spisak prijatelja"
 
 #: src/menu_events.cpp:2764
-#, fuzzy
 msgid "Added to friends list: $nick"
-msgstr "Dodat na spisak prijatelja: "
+msgstr "Dodat na spisak prijatelja: $nick"
 
 #: src/menu_events.cpp:2780
-#, fuzzy
 msgid "Removed from list: $nick"
-msgstr "Uklonjen sa spiska: "
+msgstr "Uklonjen sa spiska: $nick"
 
 #: src/menu_events.cpp:2780 src/menu_events.cpp:2798
-#, fuzzy
 msgid "friends and ignores list"
-msgstr "na spisku ignorisanih"
+msgstr "spisak prijatelja i ignorisanih"
 
 #: src/menu_events.cpp:2798
 msgid "There are no players on your friends or ignore list."
 msgstr "Nema igrača ni na vašem spisku prijatelja ni ignorisanih."
 
 #: src/menu_events.cpp:2803
-#, fuzzy
 msgid "version"
 msgstr "verzija"
 
 #: src/menu_events.cpp:2819
 msgid "registering with password *** and no email address"
-msgstr ""
+msgstr "registrujem sa lozinkom *** i bez adrese e-pošte"
 
 #: src/menu_events.cpp:2823
 msgid "registering with password *** and email address $email"
-msgstr ""
+msgstr "registrujem sa lozinkom *** i adresom e-pošte $email"
 
 #: src/menu_events.cpp:2826 src/menu_events.cpp:2837 src/menu_events.cpp:2855
 #: src/menu_events.cpp:2869
 msgid "nick registration"
-msgstr ""
+msgstr "registrujem nadimak"
 
 #: src/menu_events.cpp:2837
 msgid "dropping your username"
-msgstr ""
+msgstr "uklanjam vaš nadimak"
 
 #: src/menu_events.cpp:2855
 msgid "setting $var to $value"
-msgstr ""
+msgstr "postavljam $var na $value"
 
 #: src/menu_events.cpp:2869
-#, fuzzy
 msgid "requesting information for user $nick"
-msgstr "Zatražite podatke o nadimku."
+msgstr "tražim podatke o korisniku $nick"
 
 #: src/menu_events.cpp:2981
 msgid "Couldn't find label or unit containing the string '$search'."
-msgstr "Nisam mogao da nađem etiketu ili jedinicu koja sadrži ‘$search|’."
+msgstr "Ne mogu da nađem etiketu ili jedinicu koja sadrži ‘$search|’."
 
 # well-spelled: дроидовати
 #: src/menu_events.cpp:3010
 msgid "Can't droid invalid side: '$side'."
-msgstr "Ne može se droidovati nevaljana strana: ‘$side|’."
+msgstr "Ne može se droidovati loša strana: ‘$side|’."
 
 # well-spelled: дроидовати
 #: src/menu_events.cpp:3015
@@ -9076,7 +9063,7 @@ msgstr "Ne može se droidovati umrežena strana: ‘$side|’."
 
 #: src/menu_events.cpp:3052
 msgid "Can't change control of invalid side: '$side'."
-msgstr "Ne može se promijeniti upravljanje nad nevaljanom stranom: ‘$side|’."
+msgstr "Ne može se promijeniti upravljanje nad lošom stranom: ‘$side|’."
 
 #: src/menu_events.cpp:3058
 msgid "Can't change control of out-of-bounds side: '$side'."
@@ -9100,23 +9087,22 @@ msgstr "Ispravljanje deaktivirano!"
 
 #: src/menu_events.cpp:3224
 msgid "Variable not found"
-msgstr ""
+msgstr "Promenljiva nije nađena"
 
 #: src/menu_events.cpp:3262
 msgid ""
 "Invalid alignment: '$alignment', needs to be one of lawful, neutral or "
 "chaotic."
 msgstr ""
+"Loš argument: ‘$alignment’ mora biti jedno od lawful, neutral ili chaotic."
 
 #: src/menu_events.cpp:3319
-#, fuzzy
 msgid "Invalid unit type"
-msgstr "Nevaljano ime oznake"
+msgstr "Loš tip jedinice"
 
 #: src/menu_events.cpp:3332
-#, fuzzy
 msgid "Invalid location"
-msgstr "Nevaljana boja"
+msgstr "Loša lokacija"
 
 #: src/menu_events.cpp:3368
 msgid "ai"
@@ -9158,7 +9144,7 @@ msgstr "Petlja preusmeravanja na strani servera"
 
 #: src/multiplayer.cpp:256
 msgid "Bad data received from server"
-msgstr ""
+msgstr "Loši podaci primljeni sa servera"
 
 #: src/multiplayer.cpp:297
 msgid "You must login first."
@@ -9173,7 +9159,7 @@ msgid ""
 "The nick '$nick' contains invalid characters. Only alpha-numeric characters, "
 "underscores and hyphens are allowed."
 msgstr ""
-"Nadimak „$nick“ sadrži nevaljane znakove. Dozvoljena su samo slova, brojevi, "
+"Nadimak „$nick“ sadrži loše znakove. Dozvoljena su samo slova, brojevi, "
 "podvlake i crtice."
 
 #: src/multiplayer.cpp:305
@@ -9299,11 +9285,11 @@ msgstr "U boj!"
 
 #: src/multiplayer_connect.cpp:1041
 msgid "The scenario is invalid because it has no id."
-msgstr "Scenario nije nije valjan jer nema ID."
+msgstr "Scenario nije je nepravilan jer nema ID."
 
 #: src/multiplayer_connect.cpp:1045
 msgid "The scenario is invalid because it has no sides."
-msgstr "Scenario nije nije valjan jer nema strana."
+msgstr "Scenario nije je nepravilan jer nema strana."
 
 #: src/multiplayer_connect.cpp:1440
 msgid "Network Player"
@@ -9455,12 +9441,11 @@ msgstr "$login-ova igra"
 
 #: src/multiplayer_create.cpp:287
 msgid "Invalid era selected"
-msgstr "Izabrana je nevaljana epoha"
+msgstr "Izabrana je loša epoha"
 
 #: src/multiplayer_create.cpp:333
-#, fuzzy
 msgid "The map is invalid."
-msgstr "Igra je završena."
+msgstr "Mapa je nepravilna."
 
 #: src/multiplayer_create.cpp:335
 msgid "You must enter a name."
@@ -9524,7 +9509,7 @@ msgstr "veličina: "
 
 #: src/multiplayer_ui.cpp:195
 msgid "Invalid Color"
-msgstr "Nevaljana boja"
+msgstr "Loša boja"
 
 #: src/multiplayer_ui.cpp:425
 msgid "Selected user: "
@@ -9576,7 +9561,7 @@ msgstr[3] "zlatnik"
 
 #: src/network.cpp:106
 msgid "invalid network handle"
-msgstr "nevaljana mrežna ručka"
+msgstr "loša mrežna ručka"
 
 #: src/network.cpp:139
 msgid "Client disconnected"
@@ -9748,23 +9733,14 @@ msgstr[3] ""
 "početni broj."
 
 #: src/playsingle_controller.cpp:255
-#, fuzzy
 msgid ""
 "You will start the next scenario with the defined minimum starting gold."
 msgid_plural ""
 "You will start the next scenario with the defined minimum starting gold."
-msgstr[0] ""
-"Počinjete naredni scenario sa $gold zlatnikom dodatim na zadati najmanji "
-"početni broj."
-msgstr[1] ""
-"Počinjete naredni scenario sa $gold zlatnika dodata na zadati najmanji "
-"početni broj."
-msgstr[2] ""
-"Počinjete naredni scenario sa $gold zlatnika dodatih na zadati najmanji "
-"početni broj."
-msgstr[3] ""
-"Počinjete naredni scenario sa jednim zlatnikom dodatim na zadati najmanji "
-"početni broj."
+msgstr[0] "Počinjete naredni scenario sa zadatim najmanjim brojem zlatnika."
+msgstr[1] "Počinjete naredni scenario sa zadatim najmanjim brojem zlatnika."
+msgstr[2] "Počinjete naredni scenario sa zadatim najmanjim brojem zlatnika."
+msgstr[3] "Počinjete naredni scenario sa zadatim najmanjim brojem zlatnika."
 
 #: src/playsingle_controller.cpp:263
 msgid ""
@@ -9923,7 +9899,7 @@ msgstr "Nedovršena oznaka [element]"
 
 #: src/serialization/parser.cpp:184 src/serialization/parser.cpp:222
 msgid "Invalid tag name"
-msgstr "Nevaljano ime oznake"
+msgstr "Loše ime oznake"
 
 #: src/serialization/parser.cpp:187
 msgid "Unterminated [+element] tag"
@@ -9931,7 +9907,7 @@ msgstr "Nedovršena oznaka [+element]"
 
 #: src/serialization/parser.cpp:203
 msgid "Invalid closing tag name"
-msgstr "Nevaljano ime zatvarajuće oznake"
+msgstr "Loše ime zatvarajuće oznake"
 
 #: src/serialization/parser.cpp:206
 msgid "Unterminated closing tag"
@@ -9943,7 +9919,7 @@ msgstr "Neočekivana zatvarajuća oznaka"
 
 #: src/serialization/parser.cpp:216
 msgid "Found invalid closing tag $tag2 for tag $tag1 (opened at $pos)"
-msgstr "Nađena nevaljana zatvarajuća oznaka $tag2 za $tag1 (otvoreno kod $pos)"
+msgstr "Nađena loša zatvarajuća oznaka $tag2 za $tag1 (otvoreno kod $pos)"
 
 #: src/serialization/parser.cpp:241 src/serialization/parser.cpp:253
 msgid "Empty variable name"
