--- a/po/wesnoth-aoi/sr@ijekavianlatin.po
+++ b/po/wesnoth-aoi/sr@ijekavianlatin.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: wesnoth-aoi\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-02-23 01:38+0100\n"
+"PO-Revision-Date: 2010-04-05 17:36+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -201,7 +201,7 @@ msgid ""
 "with your archers from the safety of the forest."
 msgstr ""
 "Savet:\n"
-"Vilenjaci se umiju brzo i bezbijedno kretati među drvećem. Skidaj "
+"Vilenjaci se umiju brzo i bezbjedno kretati među drvećem. Skidaj "
 "neprijateljske groktaše svojim strijelcima iz zaklona šume."
 
 #. [objective]: condition=win
@@ -1038,7 +1038,7 @@ msgid ""
 "Withdraw and make camp a safe distance from the hills. There is no further "
 "point in this fight. We'll wait for reinforcements."
 msgstr ""
-"Povucimo se i ulogorimo na bezbijednom odstojanju od brdâ̂. Nema više svrhe "
+"Povucimo se i ulogorimo na bezbjednom odstojanju od brdâ̂. Nema više svrhe "
 "ovoj borbi. Sačekaćemo pojačanja."
 
 #. [message]: speaker=narrator
