--- a/po/wesnoth-ei/sr@ijekavianlatin.po
+++ b/po/wesnoth-ei/sr@ijekavianlatin.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: wesnoth-ei\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-05 01:53+0100\n"
+"PO-Revision-Date: 2010-04-05 17:36+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -1447,7 +1447,7 @@ msgstr ""
 "Nada da se ova sela mogu zaštiti je bespredmetna. Svi koji ostanu, izginuće. "
 "Ali, ako smognemo rasterati sve razbojnike, možda možemo urediti da svi "
 "seljani krenu s nama ka Severozemlju. Tamo imaju izgleda da prežive. Vesnot "
-"više nije bezbijedan."
+"više nije bezbjedan."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05.Northern_Outpost.cfg:148
@@ -1542,7 +1542,7 @@ msgstr "Poražen sam! Nema mi više strahovlade u ovim selima..."
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05.Northern_Outpost.cfg:491
 msgid "We still need to defeat these undead for the villagers to be safe."
-msgstr "I dalje nam je poraziti nemrtve da bi seljani bili bezbijedni."
+msgstr "I dalje nam je poraziti nemrtve da bi seljani bili bezbjedni."
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/05.Northern_Outpost.cfg:497
@@ -2238,7 +2238,7 @@ msgid ""
 "After reaching what they believed was safety, Gweddry and his men had been "
 "captured by northern orcs."
 msgstr ""
-"Pošto stigoše, kako su mislili, na bezbijedno, Gvedrija i njegove ljude "
+"Pošto stigoše, kako su mislili, na bezbjedno, Gvedrija i njegove ljude "
 "zarobiše sjevernjački orkovi."
 
 #. [part]
@@ -2556,7 +2556,7 @@ msgid ""
 "It is not safe here, but we cannot go back north. The orcs are a more "
 "immediate threat."
 msgstr ""
-"Ovdje nije bezbijedno, ali ne možemo opet na sjever. Orkovi su nam "
+"Ovdje nije bezbjedno, ali ne možemo opet na sjever. Orkovi su nam "
 "neposrednija pretnja."
 
 #. [option]: speaker=Gweddry
@@ -3142,7 +3142,7 @@ msgstr ""
 "dosege moje lične moći. Za razliku od velikog generala Gvedrija, ne želim da "
 "se skrivam iza oklopnih suknji svojih vojnika! Ti si, o zapovjedniče Gvedri, "
 "obična kukavica! Bardovi mogu opjevati kako si pobijedio moje kapetane, ali "
-"u zbilji nisi učinio ništa do skrivao se u bezbijednosti zaleđine svojih "
+"u zbilji nisi učinio ništa do skrivao se u bezbjednosti zaleđine svojih "
 "redova, dok su drugi hrabriji od tebe krvarili i ginuli u tvoje ime."
 
 #. [message]: speaker=Gweddry
