--- a/po/wesnoth-l/sr@ijekavian.po
+++ b/po/wesnoth-l/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-l\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-05 01:33+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -1380,7 +1380,7 @@ msgstr ""
 "Приказ за магију бившег краља одржавало је чврст стисак над увјежбавањем и "
 "упошљавањем магова у Весноту. С онима међу нама који су се усудили да... "
 "зађу изван наставног плана, такорећи, сурово се обрачунавало. Изгнани смо "
-"јер искамо владање магијом из сијенке. Наша потаја и безбиједност не долазе "
+"јер искамо владање магијом из сијенке. Наша потаја и безбједност не долазе "
 "јефтино."
 
 #. [message]: speaker=Baldras
@@ -1593,7 +1593,7 @@ msgid ""
 "their safety even after eradicating the lich."
 msgstr ""
 "Балдрас и његова дружина брзо напустише Сједошумље, не сасма убеђени у "
-"сопствену безбиједност пошто су истријебили косца."
+"сопствену безбједност пошто су истријебили косца."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:27
@@ -1864,7 +1864,7 @@ msgid ""
 "Elensefar."
 msgstr ""
 "Године Веснота 161., 338 година прије Ашевирине издаје, новокрунисани краљ "
-"пожеле да учини безбиједном, једном и за свагда, дивљину која раздвајаше "
+"пожеле да учини безбједном, једном и за свагда, дивљину која раздвајаше "
 "људске градове око Велдина и приобална подручја Еленсефара."
 
 #. [part]
