--- a/po/wesnoth-l/sr@ijekavianlatin.po
+++ b/po/wesnoth-l/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-l\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-05 01:33+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -1380,7 +1380,7 @@ msgstr ""
 "Prikaz za magiju bivšeg kralja održavalo je čvrst stisak nad uvježbavanjem i "
 "upošljavanjem magova u Vesnotu. S onima među nama koji su se usudili da... "
 "zađu izvan nastavnog plana, takoreći, surovo se obračunavalo. Izgnani smo "
-"jer iskamo vladanje magijom iz sijenke. Naša potaja i bezbijednost ne dolaze "
+"jer iskamo vladanje magijom iz sijenke. Naša potaja i bezbjednost ne dolaze "
 "jeftino."
 
 #. [message]: speaker=Baldras
@@ -1595,7 +1595,7 @@ msgid ""
 "their safety even after eradicating the lich."
 msgstr ""
 "Baldras i njegova družina brzo napustiše Sjedošumlje, ne sasma ubeđeni u "
-"sopstvenu bezbijednost pošto su istrijebili kosca."
+"sopstvenu bezbjednost pošto su istrijebili kosca."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:27
@@ -1866,7 +1866,7 @@ msgid ""
 "Elensefar."
 msgstr ""
 "Godine Vesnota 161., 338 godina prije Aševirine izdaje, novokrunisani kralj "
-"požele da učini bezbijednom, jednom i za svagda, divljinu koja razdvajaše "
+"požele da učini bezbjednom, jednom i za svagda, divljinu koja razdvajaše "
 "ljudske gradove oko Veldina i priobalna područja Elensefara."
 
 #. [part]
