--- a/po/wesnoth-lib/sr.po
+++ b/po/wesnoth-lib/sr.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-lib\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-26 15:39+0100\n"
-"PO-Revision-Date: 2010-03-03 01:21+0100\n"
+"PO-Revision-Date: 2010-03-28 22:56+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -1979,7 +1979,7 @@ msgstr "Редови ћаскања: "
 
 #: src/game_preferences_display.cpp:907 src/game_preferences_display.cpp:915
 msgid "Invalid username"
-msgstr "Неваљано корисничко име"
+msgstr "Лоше корисничко име"
 
 #: src/game_preferences_display.cpp:1018
 msgid "yes"
@@ -2111,7 +2111,7 @@ msgstr "Стек није задат."
 
 #: src/gui/dialogs/game_load.cpp:244
 msgid "#(Invalid)"
-msgstr "#(неваљан)"
+msgstr "#(лоше)"
 
 #: src/gui/dialogs/game_load.cpp:264
 msgid "Campaign: $campaign_name"
@@ -2167,11 +2167,11 @@ msgstr "У соби $name"
 
 #: src/gui/dialogs/lobby_main.cpp:1400
 msgid "$player has entered the room"
-msgstr ""
+msgstr "$player уђе у собу"
 
 #: src/gui/dialogs/lobby_main.cpp:1438
 msgid "$player has left the room"
-msgstr ""
+msgstr "$player напусти собу"
 
 #: src/gui/dialogs/lobby_main.cpp:1551
 msgid "Password Required"
@@ -2802,7 +2802,7 @@ msgid ""
 "An error due to possibly invalid WML occurred\n"
 "The error message is :"
 msgstr ""
-"Грешка због могућег неваљаног ВМЛ-а\n"
+"Грешка због могућег неправилног ВМЛ-а\n"
 "Порука је:"
 
 #: src/wml_exception.cpp:55
