--- a/po/wesnoth-low/sr@ijekavian.po
+++ b/po/wesnoth-low/sr@ijekavian.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-14 18:26+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -300,7 +300,7 @@ msgstr ""
 "ободима Велике сјеверне шуме. Иако не бијеше племенита рода, рано је исказао "
 "надареност у вјештинама свог народа. Хитрим умом задобио је више од "
 "уобичајеног поштовања међу старешинама, иначе шкртим у поклањању пажње било "
-"коме млађем од столећа."
+"коме млађем од стољећа."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/01_The_Uprooting.cfg:47
@@ -793,7 +793,7 @@ msgid ""
 "since the other path is through troll territory..."
 msgstr ""
 "Понадах се да ћемо избјећи ове стазе... Источни, краћи пут је кроз патуљачке "
-"посједе. Молим се да нам патуљци дозволе безбиједан пролазак, јер је други "
+"посједе. Молим се да нам патуљци дозволе безбједан пролазак, јер је други "
 "пут кроз земљу тролова..."
 
 #. [message]: id=Olurf
@@ -1064,7 +1064,7 @@ msgid ""
 "Then you have not heard the ill tidings. King Haldric has broken the treaty. "
 "The humans will not come to our help!"
 msgstr ""
-"Онда нисте чули рђаве новости. Краљ Халдрик је порекинуо споразум. Ништа од "
+"Онда нисте чули рђаве новости. Краљ Халдрик је прекинуо споразум. Ништа од "
 "помоћи људи!"
 
 #. [message]: id=Kalenz
@@ -1073,8 +1073,8 @@ msgid ""
 "We have failed to relieve the defenders, and more orcish war-bands are "
 "arriving. All is lost!"
 msgstr ""
-"Не успјесмо да одлакшамо браниоцима, а пристиже још орковских ратних "
-"дружина. Све је изгубљено!"
+"Не успјесмо да олакшамо браниоцима, а пристиже још орковских ратних дружина. "
+"Све је изгубљено!"
 
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:849
@@ -1140,7 +1140,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:1011
 msgid "We won! The Ka'lian is safe!"
-msgstr "Побиједисмо! Калијан је безбиједан!"
+msgstr "Побиједисмо! Калијан је безбједан!"
 
 # |, no-check-spell
 #. [unit]: id=Huraldur, type=Elvish Scout
@@ -1943,7 +1943,7 @@ msgid ""
 "Kalenz, you have won a great victory! Wesmere is safe. But...for what cause "
 "have you invited a dwarf to the elvish council? This is most unusual!"
 msgstr ""
-"Калензе, изборио си велику побједу! Весмер је безбиједан. Али... с којим "
+"Калензе, изборио си велику побједу! Весмер је безбједан. Али... с којим "
 "наумом позва једног патуљка на вилењачко вијеће?"
 
 #. [part]
@@ -2175,7 +2175,7 @@ msgid ""
 "before starting off on the long and dangerous trip to the great mage of "
 "Thoria. They would soon find that peril was closer than they had reckoned."
 msgstr ""
-"Увјерени да ће се привидна безбиједност Весмера показати скупом варком, "
+"Увјерени да ће се привидна безбједност Весмера показати скупом варком, "
 "Каленз и Олурф оставише довољно снага и залиха за одбрану, прије него што се "
 "запутише на дуг и опасан пут до великог мага из Торије. Убрзо ће дознати да "
 "опасност бијеше ближа него што су рачунали."
@@ -2793,7 +2793,7 @@ msgstr ""
 "осорнијим и сумњичавијим према онима које је некада убрајао у савезнике. "
 "Свако се може служити Рубином у боју, кад се његов бијес стопи са ватреним "
 "духом драгуља, али само прави господар магије, или неко необично чистог "
-"срца, може безбиједно руковати њиме ван боја. Незаклоњено, магично зрачење "
+"срца, може безбједно руковати њиме ван боја. Незаклоњено, магично зрачење "
 "Рубина помало преобраћује Халдрика кад год му се овај приближи."
 
 #. [part]
@@ -2854,7 +2854,7 @@ msgid ""
 msgstr ""
 "Морате убити њиховог великог поглавицу, али тако да изгледа као да су то "
 "учинили други оркови. Тиме ћете их гурнути у међусобни рат за наслијеђе, јер "
-"многи жуде за мјестом Великог Поглавице. Бићете безбиједни док се не уздигне "
+"многи жуде за мјестом Великог Поглавице. Бићете безбједни док се не уздигне "
 "нови вођ довољно јак да их поново уједини."
 
 #. [part]
@@ -3053,8 +3053,8 @@ msgid ""
 "us. Cleodil will guard it until we find a worthy keeper."
 msgstr ""
 "Ландар је можда нагао, али је изврстан борац и повјерљив пријатељ. Мислим да "
-"сада треба да се посветимо задатку. Крелану, твоја ће књига бити безбиједна "
-"с нама. Клеодил ће је носити док не нађемо достојног чувара."
+"сада треба да се посветимо задатку. Крелану, твоја ће књига бити безбједна с "
+"нама. Клеодил ће је носити док не нађемо достојног чувара."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:250
@@ -3062,7 +3062,7 @@ msgid ""
 "Come, I will give you and Landar the potion and show you a safe point to "
 "cross the river."
 msgstr ""
-"Дођите, даћу теби и Ландару напитак, и показати вам безбиједно мјесто за "
+"Дођите, даћу теби и Ландару напитак, и показати вам безбједно мјесто за "
 "прелажење ријеке."
 
 #. [scenario]: id=13_News_from_the_front
@@ -3125,7 +3125,7 @@ msgstr ""
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/13_News_from_the_front.cfg:141
 msgid "This means we are safe for the time being, no?"
-msgstr "Не значи ли то да смо привремено безбиједни?"
+msgstr "Не значи ли то да смо привремено безбједни?"
 
 #. [message]: id=Eonihar
 #: data/campaigns/Legend_of_Wesmere/scenarios/13_News_from_the_front.cfg:145
@@ -3547,7 +3547,7 @@ msgid ""
 "It is peril not merely to your body, but to the essence of yourself."
 msgstr ""
 "Научила сам те свему што се усуђујем. Господару... Калензе... молим се да се "
-"безбиједно вратиш. Срце ми се цијепа кад помислим у какву се опасност "
+"безбједно вратиш. Срце ми се цијепа кад помислим у какву се опасност "
 "упушташ. Није то тек пријетња твом физичком битку, већ самом твом суштаству."
 
 #. [part]
@@ -4046,7 +4046,7 @@ msgid ""
 "have recaptured your home. Yet I sense there is turmoil in your mind..."
 msgstr ""
 "Калензе, твој задатак је довршен. Велики поглавица оркова је мртав, повратио "
-"си свој дом. Па ипак, осjећам немир у твом уму..."
+"си свој дом. Па ипак, осјећам немир у твом уму..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/18_Hour_of_Glory.cfg:19
