--- a/po/wesnoth-low/sr@latin.po
+++ b/po/wesnoth-low/sr@latin.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-low\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-14 18:26+0100\n"
+"PO-Revision-Date: 2010-04-05 17:37+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -297,7 +297,7 @@ msgid ""
 "little heed to anyone younger than a century old."
 msgstr ""
 "Veliki vilenjački junak Kalenz rodi se u tihoj zelenoj šumi Lintanirskoj, na "
-"obodima Velike severne šume. Iako ne biješe plemenita roda, rano je iskazao "
+"obodima Velike severne šume. Iako ne beše plemenita roda, rano je iskazao "
 "nadarenost u veštinama svog naroda. Hitrim umom zadobio je više od "
 "uobičajenog poštovanja među starešinama, inače škrtim u poklanjanju pažnje "
 "bilo kome mlađem od stoleća."
@@ -1065,7 +1065,7 @@ msgid ""
 "Then you have not heard the ill tidings. King Haldric has broken the treaty. "
 "The humans will not come to our help!"
 msgstr ""
-"Onda niste čuli rđave novosti. Kralj Haldrik je porekinuo sporazum. Ništa od "
+"Onda niste čuli rđave novosti. Kralj Haldrik je prekinuo sporazum. Ništa od "
 "pomoći ljudi!"
 
 #. [message]: id=Kalenz
@@ -1074,7 +1074,7 @@ msgid ""
 "We have failed to relieve the defenders, and more orcish war-bands are "
 "arriving. All is lost!"
 msgstr ""
-"Ne uspesmo da odlakšamo braniocima, a pristiže još orkovskih ratnih družina. "
+"Ne uspesmo da olakšamo braniocima, a pristiže još orkovskih ratnih družina. "
 "Sve je izgubljeno!"
 
 #. [objective]: condition=win
@@ -2677,7 +2677,7 @@ msgid ""
 "You cannot even imagine it. Why do you suppose orcs came all the way here to "
 "attack you?"
 msgstr ""
-"Ne možeš ni zamisliti. Šta misliš, zašto orkovi dođoše skroz dovdje da vas "
+"Ne možeš ni zamisliti. Šta misliš, zašto orkovi dođoše skroz dovde da vas "
 "napadnu?"
 
 #. [part]
@@ -2842,7 +2842,7 @@ msgid ""
 msgstr ""
 "Kako? Ne reci da smo se morali boriti protiv saurijanaca, pregaziti Arkan-"
 "Toriju, suočiti se s rečnim nemanima, probiti kroz trolove i jetije da "
-"dođemo dovdje — nizašta!"
+"dođemo dovde — nizašta!"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/12_Revelations.cfg:135
@@ -2854,7 +2854,7 @@ msgid ""
 msgstr ""
 "Morate ubiti njihovog velikog poglavicu, ali tako da izgleda kao da su to "
 "učinili drugi orkovi. Time ćete ih gurnuti u međusobni rat za nasleđe, jer "
-"mnogi žude za mjestom Velikog Poglavice. Bićete bezbedni dok se ne uzdigne "
+"mnogi žude za mestom Velikog Poglavice. Bićete bezbedni dok se ne uzdigne "
 "novi vođ dovoljno jak da ih ponovo ujedini."
 
 #. [part]
@@ -4050,7 +4050,7 @@ msgid ""
 "have recaptured your home. Yet I sense there is turmoil in your mind..."
 msgstr ""
 "Kalenze, tvoj zadatak je dovršen. Veliki poglavica orkova je mrtav, povratio "
-"si svoj dom. Pa ipak, osjećam nemir u tvom umu..."
+"si svoj dom. Pa ipak, osećam nemir u tvom umu..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/18_Hour_of_Glory.cfg:19
@@ -4389,8 +4389,8 @@ msgid ""
 "Kalenz, the council has decided that you are to be stripped of all military "
 "authority. You may now go."
 msgstr ""
-"Kalenze, veće je odlučilo da te razriješi svih vojnih nadležnosti. Sada "
-"možeš poći."
+"Kalenze, veće je odlučilo da te razreši svih vojnih nadležnosti. Sada možeš "
+"poći."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/20_Council_ruling.cfg:55
@@ -4783,8 +4783,8 @@ msgid ""
 "Landar's remaining followers' lives were spared, but they were banished to "
 "Gitamoth forest, henceforth known as Silent Forest."
 msgstr ""
-"Preostalim Landarovim sledbenicima behu pošteđeni životi, ali ih protjeraše "
-"u Gitamotsku šumu, od tada znanu kao Nečujna šuma."
+"Preostalim Landarovim sledbenicima behu pošteđeni životi, ali ih proteraše u "
+"Gitamotsku šumu, od tada znanu kao Nečujna šuma."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/24_Epilogue.cfg:22
