--- a/po/wesnoth-manpages/sr@latin.po
+++ b/po/wesnoth-manpages/sr@latin.po
@@ -1,7 +1,7 @@
 # Translation of wesnoth-manpages.po into Serbian.
 # Copyright (C) 2006 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2007, 2008, 2009, 2010.
 # Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>, 2010.
 #
 msgid ""
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-manpages\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-26 15:41+0100\n"
-"PO-Revision-Date: 2010-02-22 23:54+0100\n"
-"Last-Translator: Dalibor Djuric <dalibor.djuric@mozilla-srbija.org>\n"
+"PO-Revision-Date: 2010-03-28 22:56+0200\n"
+"Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -651,7 +651,7 @@ msgstr "postavlja broj poteza za izabrani scenario. Podrazumevano je B<50>."
 #: ../../doc/man/wesnoth.6:235 ../../doc/man/wesnothd.6:265
 #, no-wrap
 msgid "EXIT STATUS"
-msgstr ""
+msgstr "IZLAZNO STANJE"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:238
@@ -660,6 +660,8 @@ msgid ""
 "fonts, etc) initialization error. An exit status of 2 indicates an error "
 "with the command line options."
 msgstr ""
+"Redovno izlazno stanje je 0. Stanje 1 ukazuje na grešku u pripremi (SDL-a, "
+"fontova, itd). Stanje 2 ukazuje na grešku u opcijama komandne linije."
 
 #. type: SH
 #: ../../doc/man/wesnoth.6:239 ../../doc/man/wesnothd.6:269
@@ -1496,6 +1498,8 @@ msgid ""
 "Normal exit status is 0 when the server was properly shutdown. An exit "
 "status of 2 indicates an error with the command line options."
 msgstr ""
+"Redovno izlazno stanje je 0, kada je server pravilno ugašen. Stanje 2 "
+"ukazuje na grešku u opcijama komandne linije."
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:274
