--- a/po/wesnoth-tb/sr@ijekavian.po
+++ b/po/wesnoth-tb/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-tb\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-01 19:43+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -587,7 +587,7 @@ msgid ""
 "safely locked away in our master's dungeons by now."
 msgstr ""
 "Ха! Зароби ме, али се нећеш окористити. Отпослах твога драгог брата мага на "
-"сјевер с половицом својих људи, још дан раније. До сада већ чами безбиједно "
+"сјевер с половицом својих људи, још дан раније. До сада већ чами безбједно "
 "закључан у господаревим тамницама."
 
 #. [message]: speaker=Arne
@@ -951,8 +951,8 @@ msgid ""
 "I think I should better support my men at the front to make sure we can free "
 "my brother."
 msgstr ""
-"Мишљења сам да ћу боље подржати своје људе напријед, да обезбедим избављење "
-"брата свога."
+"Мишљења сам да ћу боље подржати своје људе напријед, да обезбиједим "
+"избављење брата свога."
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/3_Guarded_Castle.cfg:613
