--- a/po/wesnoth-tb/sr@ijekavianlatin.po
+++ b/po/wesnoth-tb/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-tb\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-01 19:43+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -587,7 +587,7 @@ msgid ""
 "safely locked away in our master's dungeons by now."
 msgstr ""
 "Ha! Zarobi me, ali se nećeš okoristiti. Otposlah tvoga dragog brata maga na "
-"sjever s polovicom svojih ljudi, još dan ranije. Do sada već čami bezbijedno "
+"sjever s polovicom svojih ljudi, još dan ranije. Do sada već čami bezbjedno "
 "zaključan u gospodarevim tamnicama."
 
 #. [message]: speaker=Arne
@@ -952,7 +952,7 @@ msgid ""
 "I think I should better support my men at the front to make sure we can free "
 "my brother."
 msgstr ""
-"Mišljenja sam da ću bolje podržati svoje ljude naprijed, da obezbedim "
+"Mišljenja sam da ću bolje podržati svoje ljude naprijed, da obezbijedim "
 "izbavljenje brata svoga."
 
 #. [message]: speaker=unit
