--- a/po/wesnoth-thot/sr@ijekavian.po
+++ b/po/wesnoth-thot/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-thot\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-05 01:53+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -301,9 +301,9 @@ msgid ""
 "Alliance. Beside the dais stood a stranger in the robes of the Order of "
 "Loremasters..."
 msgstr ""
-"У следу победе над орковима, Аиглондура сазваше у пријемну дворану Хамела, "
-"господара Кналге и господара-пратиоца Сјеверњачког савеза. Покрај катедре "
-"стајаше странац у одежди Реда наукмајсторâ."
+"У слиједу побједе над орковима, Аиглондура сазваше у пријемну дворану "
+"Хамела, господара Кналге и господара-пратиоца Сјеверњачког савеза. Покрај "
+"катедре стајаше странац у одежди Реда наукмајсторâ."
 
 #. [unit]: type=Dwarvish Witness, id=Angarthing_dummy
 #. [unit]: type=Dwarvish Witness, id=Angarthing
@@ -370,7 +370,7 @@ msgstr ""
 "Да. Баш онај којим наши највећи рунотворци начинише Ватрено жезло. Али је "
 "древан, много старији од Турсагана; он бијеше тек посљедњи његов посједник, "
 "а наше најстарије историје наговјештавају да је то чекић којим су сами "
-"патуљци исковали у срцу земље."
+"патуљци исковани у срцу земље."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_The_Past.cfg:130
@@ -1099,7 +1099,7 @@ msgid ""
 msgstr ""
 "Добро вас нашао, онда. Али ако намјеравате на исток одавдје, пазите се "
 "змашког гнијезда на литицама украј долине. Овдје су били још прије нас, а у "
-"посљедње време су врло непријатни према путницима."
+"посљедње вријеме су врло непријатни према путницима."
 
 #. [message]: speaker=Glashal
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:163
@@ -1170,7 +1170,7 @@ msgstr ""
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:230
 msgid "As you will. Go safely and return swiftly."
-msgstr "Како желиш. Пођите безбедно и вратите се брзо."
+msgstr "Како желиш. Пођите безбједно и вратите се брзо."
 
 #. [message]: speaker=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:237
@@ -1768,7 +1768,7 @@ msgid ""
 "our ancient heirloom, the Hammer of Thursagan. "
 msgstr ""
 "Трговину? Ваш разарајући удар по опседајућим орковима бијеше далеко "
-"племенитији чин од трговине. Може бити још сличних победа. И биће, тако нам "
+"племенитији чин од трговине. Може бити још сличних побједа. И биће, тако нам "
 "моћи нашег древног наслиједства, Чекића Турсагановог."
 
 #. [message]: speaker=Angarthing
@@ -2432,7 +2432,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Annalist, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Annalist.cfg:4
 msgid "Dwarvish Annalist"
-msgstr "патуљ-летописац"
+msgstr "патуљ-љетописац"
 
 #. [unit_type]: id=Dwarvish Annalist, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Annalist.cfg:22
