--- a/po/wesnoth-thot/sr@ijekavianlatin.po
+++ b/po/wesnoth-thot/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-thot\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-05 01:53+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -302,9 +302,9 @@ msgid ""
 "Alliance. Beside the dais stood a stranger in the robes of the Order of "
 "Loremasters..."
 msgstr ""
-"U sledu pobede nad orkovima, Aiglondura sazvaše u prijemnu dvoranu Hamela, "
-"gospodara Knalge i gospodara-pratioca Sjevernjačkog saveza. Pokraj katedre "
-"stajaše stranac u odeždi Reda naukmajstorâ."
+"U slijedu pobjede nad orkovima, Aiglondura sazvaše u prijemnu dvoranu "
+"Hamela, gospodara Knalge i gospodara-pratioca Sjevernjačkog saveza. Pokraj "
+"katedre stajaše stranac u odeždi Reda naukmajstorâ."
 
 #. [unit]: type=Dwarvish Witness, id=Angarthing_dummy
 #. [unit]: type=Dwarvish Witness, id=Angarthing
@@ -371,7 +371,7 @@ msgstr ""
 "Da. Baš onaj kojim naši najveći runotvorci načiniše Vatreno žezlo. Ali je "
 "drevan, mnogo stariji od Tursagana; on biješe tek posljednji njegov "
 "posjednik, a naše najstarije istorije nagovještavaju da je to čekić kojim su "
-"sami patuljci iskovali u srcu zemlje."
+"sami patuljci iskovani u srcu zemlje."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_The_Past.cfg:130
@@ -1104,7 +1104,7 @@ msgid ""
 msgstr ""
 "Dobro vas našao, onda. Ali ako namjeravate na istok odavdje, pazite se "
 "zmaškog gnijezda na liticama ukraj doline. Ovdje su bili još prije nas, a u "
-"posljednje vreme su vrlo neprijatni prema putnicima."
+"posljednje vrijeme su vrlo neprijatni prema putnicima."
 
 #. [message]: speaker=Glashal
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:163
@@ -1175,7 +1175,7 @@ msgstr ""
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:230
 msgid "As you will. Go safely and return swiftly."
-msgstr "Kako želiš. Pođite bezbedno i vratite se brzo."
+msgstr "Kako želiš. Pođite bezbjedno i vratite se brzo."
 
 #. [message]: speaker=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:237
@@ -1774,7 +1774,7 @@ msgid ""
 "our ancient heirloom, the Hammer of Thursagan. "
 msgstr ""
 "Trgovinu? Vaš razarajući udar po opsedajućim orkovima biješe daleko "
-"plemenitiji čin od trgovine. Može biti još sličnih pobeda. I biće, tako nam "
+"plemenitiji čin od trgovine. Može biti još sličnih pobjeda. I biće, tako nam "
 "moći našeg drevnog naslijedstva, Čekića Tursaganovog."
 
 #. [message]: speaker=Angarthing
@@ -2439,7 +2439,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Annalist, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Annalist.cfg:4
 msgid "Dwarvish Annalist"
-msgstr "patulj-letopisac"
+msgstr "patulj-ljetopisac"
 
 #. [unit_type]: id=Dwarvish Annalist, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Annalist.cfg:22
