--- a/po/wesnoth-trow/sr@ijekavian.po
+++ b/po/wesnoth-trow/sr@ijekavian.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-trow\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-04 20:23+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -2423,10 +2423,10 @@ msgid ""
 "before the last of the people can be evacuated."
 msgstr ""
 "Држаћемо град колико буде требало да се све избјеглице извуку. Ви сте, "
-"господару, слободни да се домогнете безбиједности чим дође сљедећи брод. "
-"Али, ако могу бити искрен, наша је одбрана развучена и исцрпљена, и "
-"користила би нам свака помоћ коју можемо добити у држању зидина. Овако, "
-"плашим се да ће нас прегазити прије него што сви успију да оду."
+"господару, слободни да се домогнете безбједности чим дође сљедећи брод. Али, "
+"ако могу бити искрен, наша је одбрана развучена и исцрпљена, и користила би "
+"нам свака помоћ коју можемо добити у држању зидина. Овако, плашим се да ће "
+"нас прегазити прије него што сви успију да оду."
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg:310
@@ -2569,7 +2569,7 @@ msgid ""
 "board the ship for Southbay."
 msgstr ""
 "Господару, стигао је посљедњи брод! Коначно, можемо укрцати сав заостао "
-"народ и отправити их на безбиједно. Принче, ви и ваши људи сада морате поћи! "
+"народ и отправити их на безбједно. Принче, ви и ваши људи сада морате поћи! "
 "Идите на докове и укрцајте се."
 
 #. [message]: speaker=Commander Aethyr
@@ -4006,7 +4006,7 @@ msgid ""
 "the only place to stop with soft sand beaches to make landfall... The Nagas "
 "like to scavenge metal from ships that they capture here."
 msgstr ""
-"Наступајте опрезно, ова острва нису безбедна. На територији смо нагајаца. "
+"Наступајте опрезно, ова острва нису безбједна. На територији смо нагајаца. "
 "Али је ово једино место гдје можемо застати, са довољно меким пјешчаним "
 "плажама да нас прихвате... Нагајци воле да сакупљају метал са бродова које "
 "овдје заробе."
@@ -4286,7 +4286,7 @@ msgid ""
 "me. It will be safe for your passengers to disembark here."
 msgstr ""
 "Халдрик бијеше? Ти си вођ ових? Ти и твоји савјетници да пођете са мном. "
-"Твоји се путници могу овдје безбиједно искрцати."
+"Твоји се путници могу овдје безбједно искрцати."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_New_Land.cfg:290
@@ -4505,8 +4505,7 @@ msgstr "Коначно се душе наших несрећника могу о
 #. [message]: speaker=Lady Dionli
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_Elf_Lords.cfg:348
 msgid "Our beaches are free again. I knew I could trust you, Haldric."
-msgstr ""
-"Наше су плаже поново безбиједне. Знадох да ти могу вјеровати, Халдриче."
+msgstr "Наше су плаже поново безбједне. Знадох да ти могу вјеровати, Халдриче."
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_Elf_Lords.cfg:358
