--- a/po/wesnoth-trow/sr@ijekavianlatin.po
+++ b/po/wesnoth-trow/sr@ijekavianlatin.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-trow\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-25 12:17+0100\n"
-"PO-Revision-Date: 2010-03-04 20:23+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -2429,7 +2429,7 @@ msgid ""
 "before the last of the people can be evacuated."
 msgstr ""
 "Držaćemo grad koliko bude trebalo da se sve izbjeglice izvuku. Vi ste, "
-"gospodaru, slobodni da se domognete bezbijednosti čim dođe sljedeći brod. "
+"gospodaru, slobodni da se domognete bezbjednosti čim dođe sljedeći brod. "
 "Ali, ako mogu biti iskren, naša je odbrana razvučena i iscrpljena, i "
 "koristila bi nam svaka pomoć koju možemo dobiti u držanju zidina. Ovako, "
 "plašim se da će nas pregaziti prije nego što svi uspiju da odu."
@@ -2575,8 +2575,8 @@ msgid ""
 "board the ship for Southbay."
 msgstr ""
 "Gospodaru, stigao je posljednji brod! Konačno, možemo ukrcati sav zaostao "
-"narod i otpraviti ih na bezbijedno. Prinče, vi i vaši ljudi sada morate "
-"poći! Idite na dokove i ukrcajte se."
+"narod i otpraviti ih na bezbjedno. Prinče, vi i vaši ljudi sada morate poći! "
+"Idite na dokove i ukrcajte se."
 
 #. [message]: speaker=Commander Aethyr
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg:762
@@ -4013,7 +4013,7 @@ msgid ""
 "the only place to stop with soft sand beaches to make landfall... The Nagas "
 "like to scavenge metal from ships that they capture here."
 msgstr ""
-"Nastupajte oprezno, ova ostrva nisu bezbedna. Na teritoriji smo nagajaca. "
+"Nastupajte oprezno, ova ostrva nisu bezbjedna. Na teritoriji smo nagajaca. "
 "Ali je ovo jedino mesto gdje možemo zastati, sa dovoljno mekim pješčanim "
 "plažama da nas prihvate... Nagajci vole da sakupljaju metal sa brodova koje "
 "ovdje zarobe."
@@ -4296,7 +4296,7 @@ msgid ""
 "me. It will be safe for your passengers to disembark here."
 msgstr ""
 "Haldrik biješe? Ti si vođ ovih? Ti i tvoji savjetnici da pođete sa mnom. "
-"Tvoji se putnici mogu ovdje bezbijedno iskrcati."
+"Tvoji se putnici mogu ovdje bezbjedno iskrcati."
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_New_Land.cfg:290
@@ -4516,8 +4516,7 @@ msgstr "Konačno se duše naših nesrećnika mogu odmoriti. Zahvalan sam ti."
 #. [message]: speaker=Lady Dionli
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_Elf_Lords.cfg:348
 msgid "Our beaches are free again. I knew I could trust you, Haldric."
-msgstr ""
-"Naše su plaže ponovo bezbijedne. Znadoh da ti mogu vjerovati, Haldriče."
+msgstr "Naše su plaže ponovo bezbjedne. Znadoh da ti mogu vjerovati, Haldriče."
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/16_Elf_Lords.cfg:358
