--- a/po/wesnoth-units/sr@ijekavianlatin.po
+++ b/po/wesnoth-units/sr@ijekavianlatin.po
@@ -10,15 +10,15 @@ msgstr ""
 "Project-Id-Version: wesnoth-units\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-03-26 15:39+0100\n"
-"PO-Revision-Date: 2010-03-02 11:21+0100\n"
+"PO-Revision-Date: 2010-04-05 17:47+0200\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1 ? 3 : n%10==1 && n%100!=11 ? 0 : n"
+"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Environment: wesnoth, wesnoth/noent\n"
 "X-Wrapping: fine\n"
 
@@ -895,7 +895,7 @@ msgstr ""
 "rasama, kada su neopterećeni teškim oklopom neizmijerna izdržljivost i "
 "otpornost im omogućava da u stopu prate sve osim najbržih. Patulj-izviđači "
 "uprežu ovo u svoju korist, jezdeći ispred glavnine snaga i izvještavajući o "
-"pokretima i razmiještaju neprijatelja, ili objezbeđujući važne ciljeve. "
+"pokretima i razmiještaju neprijatelja, ili obezbjeđujući važne ciljeve. "
 "Izvan bitke, često im se povjerava prenošenje poruka između patuljačkih "
 "zajednica. Međutim, svoju brzinu plaćaju slabijom zaštitom koju pruža lakši "
 "oklop."
@@ -3373,7 +3373,6 @@ msgstr "moren-uplitač"
 
 #. [unit_type]: id=Merman Entangler, race=merman
 #: data/core/units/merfolk/Entangler.cfg:22
-#, fuzzy
 msgid ""
 "Merfolk tend to use a combination of both nets and clubs in fishing; nets to "
 "collect the fish, and clubs to finish the kill. Both of these tools have "
@@ -3495,7 +3494,6 @@ msgstr "moren-mrežar"
 
 #. [unit_type]: id=Merman Netcaster, race=merman
 #: data/core/units/merfolk/Netcaster.cfg:21
-#, fuzzy
 msgid ""
 "Fishing, as practiced by mermen, is largely a matter of chasing schools of "
 "fish into waiting nets, where oar-like clubs are used to dispatch the prey. "
